New Crowdin updates (#10755)
* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip]

* fix: New German translations from Crowdin [ci skip]

* fix: New Hebrew translations from Crowdin [ci skip]

* fix: New Hungarian translations from Crowdin [ci skip]

* fix: New Italian translations from Crowdin [ci skip]

* fix: New Japanese translations from Crowdin [ci skip]

* fix: New Korean translations from Crowdin [ci skip]

* fix: New Dutch translations from Crowdin [ci skip]

* fix: New Polish translations from Crowdin [ci skip]

* fix: New Portuguese translations from Crowdin [ci skip]

* fix: New Swedish translations from Crowdin [ci skip]

* fix: New Turkish translations from Crowdin [ci skip]

* fix: New Ukrainian translations from Crowdin [ci skip]

* fix: New Chinese Simplified translations from Crowdin [ci skip]

* fix: New Chinese Traditional translations from Crowdin [ci skip]

* fix: New Vietnamese translations from Crowdin [ci skip]

* fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

* fix: New Indonesian translations from Crowdin [ci skip]

* fix: New Persian translations from Crowdin [ci skip]

* fix: New Thai translations from Crowdin [ci skip]

* fix: New English, United Kingdom translations from Crowdin [ci skip]

* fix: New Norwegian Bokmal translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Romanian translations from Crowdin [ci skip]

* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip]

* fix: New German translations from Crowdin [ci skip]

* fix: New Hebrew translations from Crowdin [ci skip]

* fix: New Hu

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
+  "New emoji": "Neuer Emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
@@ -136,6 +138,8 @@
   "Log out": "Ausloggen",
   "Mark notifications as read": "Markiere Benachrichtigungen als gelesen",
   "Archive all notifications": "Archiviere alle Benachrichtigungen",
+  "Mark as read": "Als gelesen markieren",
+  "Mark as unread": "Als ungelesen markieren",
   "New App": "Neue Anwendung",
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
@@ -172,6 +176,7 @@
   "Navigation": "Navigation",
   "Notification": "Benachrichtigung",
   "Groups": "Gruppen",
+  "Emoji": "Emoji",
   "People": "Personen",
   "Share": "Teilen",
   "Workspace": "Arbeitsbereich",
@@ -253,6 +258,22 @@
   "Currently editing": "Derzeit in Bearbeitung",
   "Currently viewing": "Gerade angezeigt",
   "Viewed {{ timeAgo }}": "Angesehen {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Dateityp ist nicht unterstützt. Bitte verwende ein PNG, JPG, GIF oder WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Die Datei ist zu groß. Maximal erlaubte Größe {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Wird hochgeladen",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Bild hochladen",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul konnte nicht geladen werden",
   "Loading Failed": "Laden fehlgeschlagen",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Leider konnte ein Teil der Software nicht geladen werden weil der Inhalt sich inzwischen geändert hat oder eine Abfrage nicht erfolgreich abgeschlossen werden konnte. Bitte neu laden.",
@@ -311,6 +332,7 @@
   "Objects": "Objekte",
   "Symbols": "Symbole",
   "Flags": "Flaggen",
+  "Custom": "Benutzerdefiniert",
   "View only": "Nur anzeigen",
   "Can edit": "Darf bearbeiten",
   "No access": "Kein Zugriff",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Tut uns leid, ein Fehler ist aufgetreten.",
   "Click to retry": "Erneut versuchen",
   "Back": "Zurück",
+  "Notification options": "Notification options",
   "Unknown": "Unbekannt",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Symbol",
   "OAuth client icon": "OAuth-Client-Symbol",
   "My App": "Meine Anwendung",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
-  "Upload an image": "Bild hochladen",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Datei konnte nicht importiert werden",
   "Unsubscribed from document": "Dokument nicht abonniert",
   "Unsubscribed from collection": "Von der Sammlung abgemeldet",
@@ -597,6 +630,9 @@
   "Comment options": "Kommentar Optionen",
   "Enable viewer insights": "Leserstatistiken aktivieren",
   "Enable embeds": "Einbettungen aktivieren",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Datei",
   "Group members": "Gruppenmitglieder",
   "Edit group": "Gruppe bearbeiten",
@@ -647,9 +683,9 @@
   "30 days": "30 Tage",
   "60 days": "60 Tage",
   "90 days": "90 Tage",
-  "Custom": "Benutzerdefiniert",
   "No expiration": "Ohne Ablaufdatum",
   "The document archive is empty at the moment.": "Das Dokumentenarchiv ist momentan leer.",
+  "Done editing": "Bearbeitung abschließen",
   "Drop documents to import": "Dokumente zum Importieren hier ablegen",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> enthält noch keine\n                    Dokumente.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} Benutzer und {{ groupsCount }} Gruppen mit Zugriff",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} Benutzer mit Zugriff",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} Gruppe mit Zugriff",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} Gruppen mit Zugriff",
-  "Archived by {{userName}}": "Archiviert durch {{userName}}",
-  "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
-  "Add a description": "Beschreibung hinzufügen",
   "Overview": "Übersicht",
   "Popular": "Popular",
   "Recently updated": "Vor Kurzem aktualisiert",
   "Recently published": "Vor Kurzem veröffentlicht",
   "Least recently updated": "Am längsten nicht aktualisiert",
   "A–Z": "A - Z",
+  "Archived by {{userName}}": "Archiviert durch {{userName}}",
+  "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
+  "Add a description": "Beschreibung hinzufügen",
   "Signing in": "Wird angemeldet",
   "You can safely close this window once the Outline desktop app has opened": "Du kannst dieses Fenster schließen, sobald die Outline Desktop-App geöffnet wurde",
   "Error creating comment": "Fehler beim Erstellen des Kommentars",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "{{noun}} bearbeiten",
   "Archived": "Archiviert",
   "Save draft": "Entwurf speichern",
-  "Done editing": "Bearbeitung abschließen",
   "Restore version": "Version wiederherstellen",
   "No history yet": "Noch keine Historie",
   "Source": "Quelle",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Inline-LaTeX",
   "Triggers": "Auslöser",
   "Mention users and more": "Erwähne Benutzer und mehr",
-  "Emoji": "Emoji",
   "Insert block": "Block einfügen",
   "Sign In": "Anmelden",
   "Continue with Email": "Weiter mit E-Mail",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Das Rotieren des Client-Secrets macht das aktuelle Secret ungültig. Stellen Sie sicher, dass Sie alle Anwendungen, die diese Zugangsdaten verwenden, entsprechend aktualisieren.",
   "Displayed to users when authorizing": "Wird den Benutzern bei der Autorisierung angezeigt",
   "Application icon": "App-Symbol",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Entwicklerinformationen, die den Benutzern bei der Autorisierung angezeigt werden",
   "Developer name": "Entwicklername",
   "Developer URL": "Entwickler-URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Dein Import wird bearbeitet, du kannst diese Seite sicher verlassen",
   "File not supported – please upload a valid ZIP file": "Datei wird nicht unterstützt – bitte lade eine gültige ZIP-Datei hoch",
   "Set the default permission level for collections created from the import": "Legen Sie die Standardberechtigung für Sammlungen fest, die vom Import erstellt wurden",
-  "Uploading": "Wird hochgeladen",
   "Start import": "Import starten",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Wird ausgeführt",
   "Expired": "Abgelaufen",
   "Completed": "Erledigt",
@@ -1060,6 +1099,8 @@
   "Editors": "Redakteure",
   "All status": "Jeder Status",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Links",
   "Right": "Rechts",
   "Settings saved": "Einstellungen gespeichert",
