--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
   "Apply template": "Aplicar plantilla",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desconectar",
   "Disconnect analytics": "Desconectar analítica",
   "Home": "Inicio",
@@ -136,6 +138,8 @@
   "Log out": "Salir",
   "Mark notifications as read": "Marcar notificaciones como leídas",
   "Archive all notifications": "Archivar todas las notificaciones",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nueva aplicación",
   "New Application": "Nueva solicitud",
   "This version of the document was deleted": "Esta versión del documento ha sido eliminada",
@@ -172,6 +176,7 @@
   "Navigation": "Navegación",
   "Notification": "Notificación",
   "Groups": "Grupos",
+  "Emoji": "Emoticono",
   "People": "Personas",
   "Share": "Compartir",
   "Workspace": "Espacio de trabajo",
@@ -253,6 +258,22 @@
   "Currently editing": "Editando actualmente",
   "Currently viewing": "Visualizando actualmente",
   "Viewed {{ timeAgo }}": "Visto {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Subiendo",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "El módulo no ha podido ser cargado",
   "Loading Failed": "Carga fallida",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Lo sentimos, parte de la aplicación no pudo ser cargada. Esto puede deberse a que se actualizó desde que abriste la pestaña o debido a una solicitud de red fallida. Por favor intenta recargar la página.",
@@ -311,6 +332,7 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Banderas",
+  "Custom": "Personalizado",
   "View only": "Solo lectura",
   "Can edit": "Puede editar",
   "No access": "Sin acceso",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Lo sentimos, ha ocurrido un error.",
   "Click to retry": "Haz clic para volver a intentarlo",
   "Back": "Atrás",
+  "Notification options": "Notification options",
   "Unknown": "Desconocido",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marcar todas como leídas",
   "You're all caught up": "Estás al día",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ícono",
   "OAuth client icon": "OAuth client icon",
   "My App": "Mi aplicación",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Nada",
   "Delete embed": "Eliminar incrustado",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "No se pudo importar el archivo",
   "Unsubscribed from document": "Desuscrito del documento",
   "Unsubscribed from collection": "Dado de baja de la colección",
@@ -597,6 +630,9 @@
   "Comment options": "Opciones de los comentarios",
   "Enable viewer insights": "Habilitar estadísticas",
   "Enable embeds": "Habilitar embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Archivo",
   "Group members": "Miembros del grupo",
   "Edit group": "Editar grupo",
@@ -647,9 +683,9 @@
   "30 days": "30 días",
   "60 days": "60 días",
   "90 days": "90 días",
-  "Custom": "Personalizado",
   "No expiration": "Sin expiración",
   "The document archive is empty at the moment.": "El archivo está vacío en este momento.",
+  "Done editing": "Edición finalizada",
   "Drop documents to import": "Arrastra los documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> no contiene documentos aún.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} usuario y {{ groupsCount }} grupos con acceso",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} usuarios con acceso",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupo con acceso",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupos con acceso",
-  "Archived by {{userName}}": "Archivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
-  "Add a description": "Añadir una descripción",
   "Overview": "Resumen",
   "Popular": "Popular",
   "Recently updated": "Actualizado recientemente",
   "Recently published": "Publicado recientemente",
   "Least recently updated": "Actualizado menos recientemente",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
+  "Add a description": "Añadir una descripción",
   "Signing in": "Iniciando sesión",
   "You can safely close this window once the Outline desktop app has opened": "Puede cerrar esta ventana de forma segura una vez que se haya abierto la aplicación de escritorio de Outline",
   "Error creating comment": "Error creando el comentario",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Archivado",
   "Save draft": "Guardar borrador",
-  "Done editing": "Edición finalizada",
   "Restore version": "Restaurar versión",
   "No history yet": "Aún no hay historial",
   "Source": "Fuente",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Línea de LaTeX",
   "Triggers": "Activadores",
   "Mention users and more": "Menciona usuarios y más",
-  "Emoji": "Emoticono",
   "Insert block": "Insertar bloque",
   "Sign In": "Iniciar sesión",
   "Continue with Email": "Continuar con el correo electrónico",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotar el secreto del cliente invalidará el secreto actual. Asegúrate de actualizar cualquier aplicación que utilice estas credenciales.",
   "Displayed to users when authorizing": "Mostrado a los usuarios mientras se autorizan",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Nombre del desarrollador",
   "Developer URL": "URL de desarollo",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Su importación está siendo procesada, puede salir de esta página de manera segura",
   "File not supported – please upload a valid ZIP file": "Archivo no soportado - por favor sube un archivo ZIP válido",
   "Set the default permission level for collections created from the import": "Establecer el nivel de permisos por defecto para las colecciones creadas a partir de la importación",
-  "Uploading": "Subiendo",
   "Start import": "Iniciar importación",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Procesando",
   "Expired": "Expirado",
   "Completed": "Completado",
@@ -1060,6 +1099,8 @@
   "Editors": "Editores",
   "All status": "Todos los estados",
   "Active": "Activo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Izquierda",
   "Right": "Derecha",
   "Settings saved": "Configuración guardada",
