--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "شما از سند مشترک خارج شده‌اید",
   "Could not leave document": "امکان خروج از سند وجود ندارد",
   "Apply template": "اعمال قالب",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "قطع اتصال",
   "Disconnect analytics": "قطع اتصال تحلیل‌گر",
   "Home": "خانه",
@@ -136,6 +138,8 @@
   "Log out": "خروج",
   "Mark notifications as read": "علامت‌گذاری اعلان‌ها به عنوان خوانده‌شده",
   "Archive all notifications": "آرشیو کردن تمام اعلان‌ها",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "اپلیکیشن جدید",
   "New Application": "برنامه جدید",
   "This version of the document was deleted": "این نسخه از سند حذف شده است",
@@ -172,6 +176,7 @@
   "Navigation": "پیمایش",
   "Notification": "اعلانات",
   "Groups": "گروه‌ها",
+  "Emoji": "ایموجی",
   "People": "افراد",
   "Share": "اشتراک‌گذاری",
   "Workspace": "مجموعه",
@@ -253,6 +258,22 @@
   "Currently editing": "در حال ویرایش",
   "Currently viewing": "در حال مشاهده",
   "Viewed {{ timeAgo }}": "مشاهده شده {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "در حال بارگذاری",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "بارگذاری تصویر",
+  "Click or drag to replace": "",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "بارگیری ماژول با خطا مواجه شد",
   "Loading Failed": "بارگیری ناموفق",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "متأسفانه امکان بارگیری بخشی از برنامه وجود نداشت. این خطا ممکن است به خاطر به‌روزرسانی ماژول یا اختلال شبکه ایجاد شده باشد. لطفاً دوباره صفحه را بارگیری کنید.",
@@ -311,6 +332,7 @@
   "Objects": "اشیاء",
   "Symbols": "نمادها",
   "Flags": "علامت‌ها",
+  "Custom": "سفارشی",
   "View only": "فقط مشاهده",
   "Can edit": "قابل ویرایش",
   "No access": "بدون دسترسی",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "متاسفیم، یک خطا رخ داد.",
   "Click to retry": "برای امتحان مجدد کلیک کنید",
   "Back": "بازگشت",
+  "Notification options": "Notification options",
   "Unknown": "ناشناخته",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "علامت گذاری همه بعنوان خوانده شده",
   "You're all caught up": "شما همه  اعلان ها و پیام ها را دیده اید",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "آیکون",
   "OAuth client icon": "آیکون کلاینت OAuth",
   "My App": "اپلیکیشن من",
@@ -575,7 +607,8 @@
   "Video": "ویدئو",
   "None": "هیچ‌کدام",
   "Delete embed": "حذف جاسازی",
-  "Upload an image": "بارگذاری تصویر",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "خطا هنگام افزودن فایل",
   "Unsubscribed from document": "دریافت اعلان‌های این سند متوقف شد",
   "Unsubscribed from collection": "دریافت اعلان‌های این مجموعه متوقف شد",
@@ -597,6 +630,9 @@
   "Comment options": "گزینه‌های نظر",
   "Enable viewer insights": "فعال‌سازی آمار بازدید",
   "Enable embeds": "فعال‌سازی جاسازی‌ها",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "فایل",
   "Group members": "اعضای گروه",
   "Edit group": "ویرایش گروه",
@@ -647,9 +683,9 @@
   "30 days": "30 روز",
   "60 days": "60 روز",
   "90 days": "90 روز",
-  "Custom": "سفارشی",
   "No expiration": "بدون انقضا",
   "The document archive is empty at the moment.": "آرشیو اسناد در حال حاضر خالی است.",
+  "Done editing": "اتمام ویرایش",
   "Drop documents to import": "اسناد را بکشید تا وارد شوند",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> هنوز هیچ سندی ندارد.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} کاربر و {{ groupsCount }} گروه دارای دسترسی هستند",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} کاربر دارای دسترسی هستند",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} گروه دارای دسترسی هستند",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} گروه دارای دسترسی هستند",
-  "Archived by {{userName}}": "آرشیو شده توسط {{userName}}",
-  "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
-  "Add a description": "توضیحاتی اضافه کنید",
   "Overview": "بررسی کلی",
   "Popular": "Popular",
   "Recently updated": "آخرین به‌روزرسانی",
   "Recently published": "آخرین انتشار",
   "Least recently updated": "اولین به‌روزرسانی",
   "A–Z": "الفبایی",
+  "Archived by {{userName}}": "آرشیو شده توسط {{userName}}",
+  "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
+  "Add a description": "توضیحاتی اضافه کنید",
   "Signing in": "در حال ورود",
   "You can safely close this window once the Outline desktop app has opened": "پس از باز شدن برنامه دسکتاپ Outline می‌توانید این پنجره را با اطمینان ببندید",
   "Error creating comment": "خطا در ایجاد نظر",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "ویرایش {{noun}}",
   "Archived": "بایگانی شده",
   "Save draft": "ذخیره پیش‌نویس",
-  "Done editing": "اتمام ویرایش",
   "Restore version": "بازیابی نسخه",
   "No history yet": "هیچ سابقه‌ای وجود ندارد",
   "Source": "منبع",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "درون خطی LaTeX",
   "Triggers": "محرک‌ها",
   "Mention users and more": "منشن کاربران و بیشتر",
-  "Emoji": "ایموجی",
   "Insert block": "افزودن بلوک",
   "Sign In": "ورود",
   "Continue with Email": "ادامه با ایمیل",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "تولید کلید جدید برای کلاینت باعث باطل شدن کلید فعلی می‌شود. مطمئن شوید برنامه‌هایی که از این اطلاعات استفاده می‌کنند را به‌روزرسانی کرده‌اید.",
   "Displayed to users when authorizing": "هنگام مجوزدهی به کاربران نمایش داده می‌شود",
   "Application icon": "آیکون برنامه",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "اطلاعات توسعه‌دهنده که هنگام مجوزدهی به کاربران نشان داده می‌شود",
   "Developer name": "نام توسعه‌دهنده",
   "Developer URL": "آدرس توسعه‌دهنده",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "وارد کردن شما در حال پردازش است، می توانید با خیال راحت این صفحه را ترک کنید",
   "File not supported – please upload a valid ZIP file": "فایل پشتیبانی نمی‌شود – لطفاً یک فایل ZIP معتبر بارگذاری کنید",
   "Set the default permission level for collections created from the import": "سطح دسترسی پیش‌فرض برای مجموعه‌های ایجاد شده از واردات را تنظیم کنید",
-  "Uploading": "در حال بارگذاری",
   "Start import": "شروع ایمپورت",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "در حال پردازش",
   "Expired": "منقضی شده",
   "Completed": "تکمیل شد",
@@ -1060,6 +1099,8 @@
   "Editors": "ویرایشگران",
   "All status": "همه وضعیت‌ها",
   "Active": "فعال",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "چپ",
   "Right": "راست",
   "Settings saved": "تنظیمات ذخیره شد",
