--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Memutuskan",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Beranda",
@@ -136,6 +138,8 @@
   "Log out": "Keluar",
   "Mark notifications as read": "Mark notifications as read",
   "Archive all notifications": "Archive all notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -172,6 +176,7 @@
   "Navigation": "Navigasi",
   "Notification": "Pemberitahuan",
   "Groups": "Grup",
+  "Emoji": "Emoji",
   "People": "Orang",
   "Share": "Bagikan",
   "Workspace": "Ruang Kerja",
@@ -253,6 +258,22 @@
   "Currently editing": "Sedang menyunting",
   "Currently viewing": "Sedang melihat",
   "Viewed {{ timeAgo }}": "Dilihat {{ timeAgo }} lalu",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Mengunggah",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul gagal dimuat",
   "Loading Failed": "Gagal Memuat",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maaf, sebagian dari aplikasi gagal dimuat. Hal ini mungkin terjadi karena aplikasi telah diperbarui sejak Anda membuka tab atau karena permintaan yang gagal. Silakan coba memuat ulang.",
@@ -311,6 +332,7 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
+  "Custom": "Custom",
   "View only": "Hanya melihat",
   "Can edit": "Can edit",
   "No access": "Tidak memiliki akses",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Maaf, telah terjadi kesalahan.",
   "Click to retry": "Klik untuk mencoba lagi",
   "Back": "Kembali",
+  "Notification options": "Notification options",
   "Unknown": "Unknown",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Tidak dapat mengimpor berkas",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -597,6 +630,9 @@
   "Comment options": "Opsi komentar",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Aktifkan penyematan",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Anggota grup",
   "Edit group": "Sunting grup",
@@ -647,9 +683,9 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Arsip dokumen kosong saat ini.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Dokumen untuk diimpor dengan drop",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> belum berisi\n                    dokumen.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} pengguna dan {{ groupsCount }} grup dengan akses",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} pengguna dengan akses",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grup dengan akses",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grup dengan akses",
-  "Archived by {{userName}}": "Diarsipkan oleh {{userName}}",
-  "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
-  "Add a description": "Tambahkan keterangan",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Baru diperbarui",
   "Recently published": "Baru diterbitkan",
   "Least recently updated": "Baru-baru ini diperbarui",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Diarsipkan oleh {{userName}}",
+  "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
+  "Add a description": "Tambahkan keterangan",
   "Signing in": "Sedang masuk",
   "You can safely close this window once the Outline desktop app has opened": "Anda dapat menutup jendela ini dengan aman setelah aplikasi desktop Outline dibuka",
   "Error creating comment": "Terjadi kesalahan saat membuat komentar",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Sunting {{noun}}",
   "Archived": "Diarsipkan",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Pulihkan versi",
   "No history yet": "Belum ada riwayat",
   "Source": "Source",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX Inline",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Masuk",
   "Continue with Email": "Lanjutkan dengan Surel",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Pengimporan Anda sedang diproses, Anda dapat meninggalkan halaman ini dengan aman",
   "File not supported – please upload a valid ZIP file": "File tidak didukung – harap unggah file ZIP yang valid",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Mengunggah",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Memproses",
   "Expired": "Kedaluwarsa",
   "Completed": "Selesai",
@@ -1060,6 +1099,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Aktif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Pengaturan disimpan",
