--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -2,7 +2,7 @@
   "New API key": "新しい API キー",
   "Delete": "削除",
   "Revoke": "無効化",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "API キーの削除",
   "Revoke token": "トークンを取り消す",
   "Open collection": "コレクションを開く",
   "New collection": "コレクションを追加",
@@ -45,8 +45,8 @@
   "Copy ID": "ID をコピー",
   "Clear IndexedDB cache": "データベースのインデックスを削除する",
   "IndexedDB cache cleared": "データベースのインデックスを削除しました",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "ローカルストレージを消去",
+  "Local storage cleared": "ローカルストレージを消去しました",
   "Toggle debug logging": "デバッグログの切り替え",
   "Debug logging enabled": "デバッグログは有効です",
   "Debug logging disabled": "デバッグログは無効です",
@@ -112,7 +112,9 @@
   "Leave document": "ドキュメントから退出する",
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
-  "Apply template": "Apply template",
+  "Apply template": "テンプレートを適用",
+  "New emoji": "新しい絵文字",
+  "Upload emoji": "絵文字をアップロード",
   "Disconnect": "接続を解除",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
@@ -136,7 +138,9 @@
   "Log out": "ログアウト",
   "Mark notifications as read": "通知を既読済みにする",
   "Archive all notifications": "全ての通知をアーカイブ",
-  "New App": "New App",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
+  "New App": "新しいアプリ",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "リンクをコピーしました",
@@ -172,6 +176,7 @@
   "Navigation": "ナビゲーション",
   "Notification": "通知",
   "Groups": "グループ",
+  "Emoji": "絵文字",
   "People": "メンバー",
   "Share": "共有",
   "Workspace": "ワークスペース",
@@ -253,6 +258,22 @@
   "Currently editing": "編集中",
   "Currently viewing": "閲覧中",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 前に閲覧済み",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "アップロード中",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "モジュールの読み込みに失敗しました",
   "Loading Failed": "読み込みに失敗しました",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "一部のアプリケーションを読み込めませんでした。 再読み込みしてください。",
@@ -311,6 +332,7 @@
   "Objects": "オブジェクト",
   "Symbols": "シンボル",
   "Flags": "フラグ",
+  "Custom": "カスタム",
   "View only": "表示のみ",
   "Can edit": "編集可能",
   "No access": "アクセス不可",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "エラーが発生しました",
   "Click to retry": "再試行",
   "Back": "戻る",
+  "Notification options": "Notification options",
   "Unknown": "不明",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全て既読にする",
   "You're all caught up": "全て確認済み",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -575,7 +607,8 @@
   "Video": "動画",
   "None": "なし",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "ファイルをインポートできませんでした",
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
@@ -597,6 +630,9 @@
   "Comment options": "コメントオプション",
   "Enable viewer insights": "ビューアインサイトを有効にする",
   "Enable embeds": "埋め込みを有効にする",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "グループのメンバー",
   "Edit group": "グループを編集",
@@ -647,9 +683,9 @@
   "30 days": "30日",
   "60 days": "60日",
   "90 days": "90日",
-  "Custom": "カスタム",
   "No expiration": "無期限",
   "The document archive is empty at the moment.": "アーカイブにはなにもありません。",
+  "Done editing": "編集完了",
   "Drop documents to import": "インポートするドキュメントをドロップ",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> にはまだ\n                    ドキュメントがありません。",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "アクセス権を持つ {{ usersCount }} 人のユーザーと {{ groupsCount }} 個のグループ",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "アクセス権を持つ {{ usersCount }} 人のユーザー",
   "{{ groupsCount }} groups with access": "アクセス権を持つ {{ groupsCount }} 個のグループ",
   "{{ groupsCount }} groups with access_plural": "アクセス権を持つ {{ groupsCount }} 個のグループ",
-  "Archived by {{userName}}": "{{userName}} がアーカイブしました",
-  "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
-  "Add a description": "説明文を追加",
   "Overview": "概要",
   "Popular": "Popular",
   "Recently updated": "更新日の新しい順",
   "Recently published": "最近公開されたもの",
   "Least recently updated": "更新日の古い順",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "{{userName}} がアーカイブしました",
+  "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
+  "Add a description": "説明文を追加",
   "Signing in": "ログイン中",
   "You can safely close this window once the Outline desktop app has opened": "Outline デスクトップ アプリが開いたら、このウィンドウを安全に閉じることができます",
   "Error creating comment": "コメントの作成中にエラーが発生しました",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "{{noun}} を編集",
   "Archived": "アーカイブ",
   "Save draft": "下書きを保存",
-  "Done editing": "編集完了",
   "Restore version": "復元",
   "No history yet": "履歴はありません",
   "Source": "ソース",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "インライン LaTeX",
   "Triggers": "トリガー",
   "Mention users and more": "ユーザーなどをメンションする",
-  "Emoji": "絵文字",
   "Insert block": "ブロックの挿入",
   "Sign In": "ログイン",
   "Continue with Email": "Eメール でログイン",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "インポートしています\nこのページを閉じても問題ありません",
   "File not supported – please upload a valid ZIP file": "非対応ファイル - 有効な ZIP ファイルをアップロードしてください",
   "Set the default permission level for collections created from the import": "インポートから作成されたコレクションについて、デフォルトの権限レベルを設定する",
-  "Uploading": "アップロード中",
   "Start import": "インポートを開始",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "処理中",
   "Expired": "期限切れ",
   "Completed": "完了",
@@ -1060,6 +1099,8 @@
   "Editors": "編集者",
   "All status": "全てのステータス",
   "Active": "アクティブ",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "設定が保存されました",
