--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Je hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
   "Apply template": "Sjabloon toepassen",
+  "New emoji": "Nieuwe emoji",
+  "Upload emoji": "Emoji uploaden",
   "Disconnect": "Ontkoppel",
   "Disconnect analytics": "Analytics ontkoppelen",
   "Home": "Startscherm",
@@ -136,6 +138,8 @@
   "Log out": "Uitloggen",
   "Mark notifications as read": "Meldingen als gelezen markeren",
   "Archive all notifications": "Alle meldingen archiveren",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nieuwe app",
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
@@ -172,6 +176,7 @@
   "Navigation": "Navigatie",
   "Notification": "Notificatie",
   "Groups": "Groepen",
+  "Emoji": "Emoji",
   "People": "Personen",
   "Share": "Delen",
   "Workspace": "Werkruimte",
@@ -253,6 +258,22 @@
   "Currently editing": "Momenteel aan het bewerken",
   "Currently viewing": "Momenteel aan het bekijken",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} bekeken",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Bestandstype niet ondersteund. Gebruik PNG, JPG, GIF of WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Bestand is te groot. Maximale grootte is {{ size }}.",
+  "Please enter a name for the emoji": "Voer een naam in voor de emoji",
+  "Please select an image file": "Selecteer een afbeeldingsbestand",
+  "Emoji created successfully": "Emoji met succes aangemaakt",
+  "Uploading": "Bezig met uploaden",
+  "Add emoji": "Emoji toevoegen",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Afbeelding uploaden",
+  "Click or drag to replace": "Klik of sleep om te vervangen",
+  "Drop the image here": "Sleep de afbeelding hierheen",
+  "Click, drop, or paste an image here": "Klik, plaats of plak hier een afbeelding",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, of WebP tot {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
+  "This emoji will be available as": "Deze emoji zal beschikbaar zijn als",
   "Module failed to load": "Module kon niet geladen worden",
   "Loading Failed": "Laden mislukt",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, een deel van de toepassing kon niet geladen worden. Dit kan komen doordat het is bijgewerkt sinds het tabblad is geopend of door een mislukt netwerkverzoek. Probeer het opnieuw te laden.",
@@ -311,6 +332,7 @@
   "Objects": "Objecten",
   "Symbols": "Symbolen",
   "Flags": "Vlaggen",
+  "Custom": "Aangepast",
   "View only": "Alleen bekijken",
   "Can edit": "Kan bewerken",
   "No access": "Geen toegang",
@@ -322,7 +344,7 @@
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Zoom in": "Inzoomen",
   "Zoom out": "Uitzoomen",
-  "Edit diagram": "Edit diagram",
+  "Edit diagram": "Diagram bewerken",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Sorry, er is iets fout gegaan.",
   "Click to retry": "Klik om opnieuw te proberen",
   "Back": "Terug",
+  "Notification options": "Notification options",
   "Unknown": "Onbekend",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
+  "Client type": "Type klant",
+  "Confidential": "Vertrouwelijk",
+  "Suitable for server-side applications": "Geschikt voor server-side toepassingen",
+  "Public": "Openbaar",
+  "Suitable for client-side or mobile applications": "Geschikt voor klanten- of mobiele applicaties",
   "Icon": "Icon",
   "OAuth client icon": "OAuth cliënt icoon",
   "My App": "Mijn App",
@@ -350,8 +382,8 @@
   "Reaction picker": "Reactie kiezer",
   "Could not load reactions": "Kon reacties niet laden",
   "Reaction": "Reactie",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}u {{ minutes }}m gelezen",
+  "{{ hours }}h read": "{{ hours }}u gelezen",
   "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
   "Current version": "Huidige versie",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Upload an image": "Afbeelding uploaden",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Kolommen verdelen",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
@@ -597,6 +630,9 @@
   "Comment options": "Opties voor reageren",
   "Enable viewer insights": "Schakel viewer inzichten uit",
   "Enable embeds": "Embeds inschakelen",
+  "Delete Emoji": "Emoji verwijderen",
+  "Emoji deleted": "Emoji verwijderd",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Weet je zeker dat je de emoji <em>{{emojiName}}</em> wilt verwijderen? Je kunt het niet meer gebruiken in je documenten of collecties.",
   "File": "Bestand",
   "Group members": "Groepsleden",
   "Edit group": "Wijzig groep",
@@ -647,9 +683,9 @@
   "30 days": "30 dagen",
   "60 days": "60 dagen",
   "90 days": "90 dagen",
-  "Custom": "Aangepast",
   "No expiration": "Geen vervaldatum",
   "The document archive is empty at the moment.": "Het documentenarchief is momenteel leeg.",
+  "Done editing": "Klaar met bewerken",
   "Drop documents to import": "Sleep documenten hier naartoe om ze te importeren",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> bevat nog geen documenten.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} gebruikers en {{ groupsCount }} groepen met toegang",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} gebruikers hebben toegang",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} groepen hebben toegang",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groepen hebben toegang",
-  "Archived by {{userName}}": "Gearchiveerd door {{userName}}",
-  "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
-  "Add a description": "Beschrijving toevoegen",
   "Overview": "Overzicht",
-  "Popular": "Popular",
+  "Popular": "Populair",
   "Recently updated": "Onlangs bijgewerkt",
   "Recently published": "Onlangs gepubliceerd",
   "Least recently updated": "Minst recent bijgewerkt",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Gearchiveerd door {{userName}}",
+  "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
+  "Add a description": "Beschrijving toevoegen",
   "Signing in": "Inloggen",
   "You can safely close this window once the Outline desktop app has opened": "Je kunt dit venster veilig sluiten zodra de Outline desktop app is geopend",
   "Error creating comment": "Fout bij maken reactie",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Wijzig {{noun}}",
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
-  "Done editing": "Klaar met bewerken",
   "Restore version": "Versie herstellen",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
@@ -782,8 +817,8 @@
   "Something went wrong": "Er ging iets mis",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, er is een onbekende fout opgetreden bij het laden van de pagina. Probeer het opnieuw of neem contact op met ondersteuning als het probleem zich blijft voordoen.",
   "Created by me": "Door mij aangemaakt",
-  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
-  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
+  "Weird, this shouldn't ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
+  "Documents with recent activity will appear here": "Documenten met recente activiteit verschijnen hier",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
   "{{ count }} invites sent": "{{ count }} uitnodigingen verzonden",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Gebruikers en meer vermelden",
-  "Emoji": "Emoji",
   "Insert block": "Voeg blok in",
   "Sign In": "Aanmelden",
   "Continue with Email": "Verdergaan met e-mailadres",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Het opnieuw genereren van het clientgeheim zal het huidige geheim ongeldig maken. Zorg ervoor dat je alle applicaties met behulp van deze inloggegevens bijwerkt.",
   "Displayed to users when authorizing": "Weergegeven aan gebruikers bij autorisatie",
   "Application icon": "App-icoon",
+  "Confidential clients can securely store a secret": "Vertrouwelijke klanten kunnen een geheim veilig opslaan",
   "Developer information shown to users when authorizing": "Ontwikkelaarsinformatie die wordt getoond aan gebruikers bij autoriseren",
   "Developer name": "Ontwikkelaar naam",
   "Developer URL": "Ontwikkelaar URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Je import wordt verwerkt, je kan deze pagina veilig verlaten",
   "File not supported – please upload a valid ZIP file": "Bestand niet ondersteund – upload een geldig ZIP-bestand",
   "Set the default permission level for collections created from the import": "Stel het standaard machtingsniveau in voor collecties vanuit de import",
-  "Uploading": "Bezig met uploaden",
   "Start import": "Start importeren",
+  "Added by": "Toegevoegd door",
+  "Date added": "Datum toegevoegd",
+  "Members exported successfully": "Leden succesvol geëxporteerd",
+  "Failed to export members": "Leden exporteren is mislukt",
+  "Download CSV": "CSV downloaden",
   "Processing": "Verwerken",
   "Expired": "Verlopen",
   "Completed": "Voltooid",
@@ -1060,6 +1099,8 @@
   "Editors": "Redacteurs",
   "All status": "Alle statussen",
   "Active": "Actief",
+  "Could not load emojis": "Kon emoji's niet laden",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Aangepaste emoji's kunnen worden gebruikt in je hele werkruimte in documenten, opmerkingen en reacties.",
   "Left": "Links",
   "Right": "Rechts",
   "Settings saved": "Instellingen opgeslagen",
@@ -1221,9 +1262,9 @@
   "Expires today": "Verloopt vandaag",
   "Expires tomorrow": "Verloopt morgen",
   "Expires {{ date }}": "Verlopen {{ date }}",
-  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
-  "Installation URL": "Installation URL",
-  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configureer een aangepaste Diagrams.net installatie-URL om je eigen zelfgehoste instantie te gebruiken voor het insluiten van diagrammen in uw documenten.",
+  "Installation URL": "Installatie-URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "De URL van je Diagrams.net installatie. Laat leeg om de cloud gehoste app.diagrams.net te gebruiken.",
   "New attribute": "Nieuw kenmerk",
   "Paper size": "Papierformaat",
   "Ask AI \"{{question}}\"": "Vraag AI \"{{question}}\"",
@@ -1373,8 +1414,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} door jou aangemaakt",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} door {{ user }} aangemaakt",
   "Caption": "Onderschrift",
-  "Empty diagram": "Empty diagram",
-  "Double click to edit": "Double click to edit",
+  "Empty diagram": "Diagram leegmaken",
+  "Double click to edit": "Dubbelklik om te bewerken",
   "Open": "Open",
   "Error loading data": "Fout bij laden van gegevens"
 }
