--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
   "Apply template": "Użyj szablonu",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Rozłącz",
   "Disconnect analytics": "Odłącz analizę",
   "Home": "Strona Główna",
@@ -136,6 +138,8 @@
   "Log out": "Wyloguj",
   "Mark notifications as read": "Oznaczaj powiadomienia jako przeczytane",
   "Archive all notifications": "Archiwizuj wszystkie powiadomienia",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nowa aplikacja",
   "New Application": "Nowa aplikacja",
   "This version of the document was deleted": "Ta wersja dokumentu została usunięta",
@@ -172,6 +176,7 @@
   "Navigation": "Nawigacja",
   "Notification": "Powiadomienie",
   "Groups": "Grupy",
+  "Emoji": "Emotikony",
   "People": "Osoby",
   "Share": "Udostępnij",
   "Workspace": "Obszar roboczy",
@@ -253,6 +258,22 @@
   "Currently editing": "Aktualnie edytujesz",
   "Currently viewing": "Aktualnie wyświetlasz",
   "Viewed {{ timeAgo }}": "Przeglądnięty {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Wysyłanie",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Prześlij obraz",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Nie udało się załadować modułu",
   "Loading Failed": "Ładowanie nie powiodło się",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Przepraszamy, nie udało się załadować części aplikacji. Może to być spowodowane tym, że został zaktualizowany od momentu otwarcia karty lub z powodu nieudanego żądania sieciowego. Spróbuj ponownie załadować.",
@@ -311,6 +332,7 @@
   "Objects": "Obiekty",
   "Symbols": "Symbole",
   "Flags": "Flagi",
+  "Custom": "Niestandardowy",
   "View only": "Tylko podgląd",
   "Can edit": "Może edytować",
   "No access": "Brak dostępu",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Przepraszamy, wystąpił błąd.",
   "Click to retry": "Kliknij, aby spróbować ponownie",
   "Back": "Wstecz",
+  "Notification options": "Notification options",
   "Unknown": "Nieznane",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikona",
   "OAuth client icon": "Ikona klienta OAuth",
   "My App": "Moja aplikacja",
@@ -575,7 +607,8 @@
   "Video": "Wideo",
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
-  "Upload an image": "Prześlij obraz",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
@@ -597,6 +630,9 @@
   "Comment options": "Opcje komentarza",
   "Enable viewer insights": "Włącz informacje o oglądających",
   "Enable embeds": "Włącz osadzanie",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Plik",
   "Group members": "Członkowie grupy",
   "Edit group": "Edytuj grupę",
@@ -647,9 +683,9 @@
   "30 days": "30 dni",
   "60 days": "60 dni",
   "90 days": "90 dni",
-  "Custom": "Niestandardowy",
   "No expiration": "Bez daty wygaśnięcia",
   "The document archive is empty at the moment.": "Archiwum dokumentów jest obecnie puste.",
+  "Done editing": "Zakończ edycję",
   "Drop documents to import": "Upuść dokumenty do zaimportowania",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> nie zawiera jeszcze żadnych dokumentów.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} użytkownik i {{ groupsCount }} grupy z dostępem",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} użytkowników z dostępem",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupa z dostępem",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grup z dostępem",
-  "Archived by {{userName}}": "Zarchiwizowane przez {{userName}}",
-  "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
-  "Add a description": "Dodaj opis",
   "Overview": "Informacje ogólne",
   "Popular": "Popular",
   "Recently updated": "Ostatnio zaktualizowane",
   "Recently published": "Ostatnio opublikowane",
   "Least recently updated": "Najmniej ostatnio zaktualizowane",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Zarchiwizowane przez {{userName}}",
+  "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
+  "Add a description": "Dodaj opis",
   "Signing in": "Logowanie...",
   "You can safely close this window once the Outline desktop app has opened": "Możesz bezpiecznie zamknąć to okno po otwarciu aplikacji komputerowej Outline",
   "Error creating comment": "Wystąpił błąd podczas tworzenia komentarza",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Edytuj {{noun}}",
   "Archived": "Zarchiwizowano",
   "Save draft": "Zapisz wersję roboczą",
-  "Done editing": "Zakończ edycję",
   "Restore version": "Przywróć wersję",
   "No history yet": "Nie ma jeszcze historii",
   "Source": "Źródło",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX w linii",
   "Triggers": "Wyzwalacze",
   "Mention users and more": "Wzmianki o użytkownikach i nie tylko",
-  "Emoji": "Emotikony",
   "Insert block": "Wstaw blok",
   "Sign In": "Zaloguj się",
   "Continue with Email": "Kontynuuj przy użyciu e-maila",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacja (zmiana) sekretu klienta spowoduje unieważnienie bieżącego sekretu. Upewnij się, że zaktualizujesz wszystkie aplikacje korzystające z tych danych uwierzytelniających.",
   "Displayed to users when authorizing": "Wyświetlane użytkownikom podczas autoryzacji",
   "Application icon": "Ikona aplikacji",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informacje o deweloperze wyświetlane użytkownikom podczas autoryzacji",
   "Developer name": "Nazwa dewelopera",
   "Developer URL": "Adres URL dewelopera",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Twój import jest przetwarzany, możesz bezpiecznie opuścić tę stronę",
   "File not supported – please upload a valid ZIP file": "Plik nieobsługiwany – prześlij prawidłowy plik ZIP",
   "Set the default permission level for collections created from the import": "Ustaw domyślny poziom uprawnień dla kolekcji utworzonych z importu",
-  "Uploading": "Wysyłanie",
   "Start import": "Rozpocznij importowanie",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Przetwarzanie",
   "Expired": "Ważność wygasła",
   "Completed": "Ukończone",
@@ -1060,6 +1099,8 @@
   "Editors": "Edytory",
   "All status": "Wszystkie statusy",
   "Active": "Aktywne",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Lewo",
   "Right": "Prawo",
   "Settings saved": "Ustawienia zapisane",
