--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Você deixou o documento compartilhado",
   "Could not leave document": "Não foi possível sair do documento",
   "Apply template": "Aplicar modelo",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desconectar",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Início",
@@ -136,6 +138,8 @@
   "Log out": "Sair",
   "Mark notifications as read": "Marcar notificações como lidas",
   "Archive all notifications": "Arquivar todas as notificações",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Novo App",
   "New Application": "Nova Aplicação",
   "This version of the document was deleted": "Esta versão do documento foi excluída",
@@ -172,6 +176,7 @@
   "Navigation": "Navegação",
   "Notification": "Notificações",
   "Groups": "Grupos",
+  "Emoji": "Emoji",
   "People": "Pessoas",
   "Share": "Compartilhar",
   "Workspace": "Espaço de Trabalho",
@@ -253,6 +258,22 @@
   "Currently editing": "Atualmente editando",
   "Currently viewing": "Atualmente visualizando",
   "Viewed {{ timeAgo }}": "Visualizou {{ timeAgo }} atrás",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Enviando",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Falha ao carregar módulo",
   "Loading Failed": "Falha ao carregar",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Desculpe, parte da aplicação falhou ao carregar. Isto pode ser porque foi atualizado desde que você abriu a guia ou devido a uma requisição de redecom falha. Tente recarregar.",
@@ -311,6 +332,7 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
+  "Custom": "Personalizado",
   "View only": "Somente visualização",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Desculpe, ocorreu um erro.",
   "Click to retry": "Clique para tentar novamente",
   "Back": "Voltar",
+  "Notification options": "Notification options",
   "Unknown": "Desconhecido",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marcar tudo como lido",
   "You're all caught up": "Você está em dia",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ícone",
   "OAuth client icon": "Ícone cliente OAuth",
   "My App": "Meu Aplicativo",
@@ -575,7 +607,8 @@
   "Video": "Vídeo",
   "None": "Nada",
   "Delete embed": "Deletar embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Não foi possível importar o arquivo",
   "Unsubscribed from document": "Cancelada inscrição do documento",
   "Unsubscribed from collection": "Cancelada inscrição da coleção",
@@ -597,6 +630,9 @@
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Enable embeds": "Habilitar incorporações",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Arquivo",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
@@ -647,9 +683,9 @@
   "30 days": "30 dias",
   "60 days": "60 dias",
   "90 days": "90 dias",
-  "Custom": "Personalizado",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo de documento está vazio no momento.",
+  "Done editing": "Edição concluída",
   "Drop documents to import": "Solte documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> não contém nenhum\n                    documento ainda.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} usuário e {{ groupsCount }} grupos com acesso",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} usuários com acesso",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupo com acesso",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupos com acesso",
-  "Archived by {{userName}}": "Arquivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
-  "Add a description": "Adicionar uma descrição",
   "Overview": "Visão geral",
   "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos recentemente atualizados",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Arquivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
+  "Add a description": "Adicionar uma descrição",
   "Signing in": "Iniciando sessão",
   "You can safely close this window once the Outline desktop app has opened": "Você pode fechar essa janela com segurança quando o aplicativo Outline for aberto no computador",
   "Error creating comment": "Erro ao criar comentário",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Arquivado",
   "Save draft": "Salvar rascunho",
-  "Done editing": "Edição concluída",
   "Restore version": "Restaurar versão",
   "No history yet": "Sem histórico por enquanto",
   "Source": "Fonte",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX em linha",
   "Triggers": "Gatilhos",
   "Mention users and more": "Mencionar usuários e mais",
-  "Emoji": "Emoji",
   "Insert block": "Inserir bloco",
   "Sign In": "Entrar",
   "Continue with Email": "Continuar com E-mail",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacionar o segredo do cliente invalidará o segredo atual. Certifique-se de atualizar todas as aplicações usando essas credenciais.",
   "Displayed to users when authorizing": "Visível aos usuários ao autorizar",
   "Application icon": "Ícone do aplicativo",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informações de desenvolvedor exibidas aos usuários ao autorizar",
   "Developer name": "Nome do desenvolvedor",
   "Developer URL": "URL do desenvolvedor",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Sua importação está sendo processada, você pode sair dessa página com segurança",
   "File not supported – please upload a valid ZIP file": "Arquivo não suportado – faça upload de um arquivo ZIP válido",
   "Set the default permission level for collections created from the import": "Definir o nível de permissão padrão para coleções criadas a partir da importação",
-  "Uploading": "Enviando",
   "Start import": "Iniciar importação",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Processando",
   "Expired": "Expirado",
   "Completed": "Concluído",
@@ -1060,6 +1099,8 @@
   "Editors": "Editores",
   "All status": "Todos os status",
   "Active": "Ativo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
   "Settings saved": "Configurações salvas",
