--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desligado",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Página inicial",
@@ -136,6 +138,8 @@
   "Log out": "Deslogar",
   "Mark notifications as read": "Marcar notificações como lidas",
   "Archive all notifications": "Arquivar todas as notificações",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -172,6 +176,7 @@
   "Navigation": "Navegação",
   "Notification": "Notificação",
   "Groups": "Grupos",
+  "Emoji": "Emoji",
   "People": "Pessoas",
   "Share": "Compartilhar",
   "Workspace": "Área de trabalho",
@@ -253,6 +258,22 @@
   "Currently editing": "Em edição",
   "Currently viewing": "Em visualização",
   "Viewed {{ timeAgo }}": "Visto {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "A carregar",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Módulo falhou ao carregar",
   "Loading Failed": "Carregamento falhou",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Parte da aplicação não foi carregada. Isto pode ser porque foi atualizado desde que abriu o separador ou devido a um erro de rede. Tente recarregar.",
@@ -311,6 +332,7 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
+  "Custom": "Personalizado",
   "View only": "Apenas consulta",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Desculpa, ocorreu um erro.",
   "Click to retry": "Clique para tentar de novo",
   "Back": "Voltar",
+  "Notification options": "Notification options",
   "Unknown": "Desconhecido",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marcar todos como lido",
   "You're all caught up": "Já estás a par de tudo",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -575,7 +607,8 @@
   "Video": "Vídeo",
   "None": "Nenhum",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -597,6 +630,9 @@
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar estatísticas do utilizador",
   "Enable embeds": "Ativar embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
@@ -647,9 +683,9 @@
   "30 days": "30 dias",
   "60 days": "60 Dias",
   "90 days": "90 dias",
-  "Custom": "Personalizado",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo do documento está vazio neste momento.",
+  "Done editing": "Edição concluída",
   "Drop documents to import": "Arraste documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> não contém\n                    documentos ainda.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} utilizador e {{ groupsCount }} grupos com acesso",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} utilizadores com acesso",
   "{{ groupsCount }} groups with access": "{{ usersCount }} grupo com acesso",
   "{{ groupsCount }} groups with access_plural": "{{ usersCount }} grupos com acesso",
-  "Archived by {{userName}}": "Arquivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
-  "Add a description": "Adicionar descrição",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos atualizado recentemente",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Arquivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
+  "Add a description": "Adicionar descrição",
   "Signing in": "A iniciar sessão",
   "You can safely close this window once the Outline desktop app has opened": "Pode fechar com segurança esta janela quando a aplicação Outline de ambiente de trabalho abrir",
   "Error creating comment": "Erro ao criar comentário",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Arquivado",
   "Save draft": "Guardar rascunho",
-  "Done editing": "Edição concluída",
   "Restore version": "Restaurar versão",
   "No history yet": "Ainda sem histórico",
   "Source": "Fonte",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX Embutido",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Iniciar Sessão",
   "Continue with Email": "Continuar com Email",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Importação está a ser processada, pode sair desta página com segurança",
   "File not supported – please upload a valid ZIP file": "Ficheiro não suportado — envie um ficheiro ZIP válido",
   "Set the default permission level for collections created from the import": "Definir o nível de permissão padrão para coleções criadas a partir da importação",
-  "Uploading": "A carregar",
   "Start import": "Iniciar importação",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "A processar",
   "Expired": "Expirado",
   "Completed": "Concluído",
@@ -1060,6 +1099,8 @@
   "Editors": "Editores",
   "All status": "Todos os estados",
   "Active": "Activo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
   "Settings saved": "Configurações guardadas",
