--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
@@ -136,6 +138,8 @@
   "Log out": "Logga ut",
   "Mark notifications as read": "Markera alla aviseringar som lästa",
   "Archive all notifications": "Arkivera alla aviseringar",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Ny App",
   "New Application": "Ny applikation",
   "This version of the document was deleted": "Denna version av dokumentet har tagits bort",
@@ -172,6 +176,7 @@
   "Navigation": "Navigation",
   "Notification": "Avisering",
   "Groups": "Grupper",
+  "Emoji": "Emoji",
   "People": "Människor",
   "Share": "Dela",
   "Workspace": "Arbetsyta",
@@ -253,6 +258,22 @@
   "Currently editing": "Redigerar just nu",
   "Currently viewing": "Visar för närvarande",
   "Viewed {{ timeAgo }}": "Visades för {{ timeAgo }} sedan",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Laddar upp",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modulen kunde inte laddas",
   "Loading Failed": "Laddning misslyckades",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Tyvärr, en del av programmet kunde inte laddas. Det kan bero på att den uppdaterades sedan du öppnade fliken eller på grund av en misslyckad nätverksbegäran. Försök att ladda om.",
@@ -311,6 +332,7 @@
   "Objects": "Objekt",
   "Symbols": "Symbol",
   "Flags": "Flaggor",
+  "Custom": "Egendefinerad",
   "View only": "Endast visa",
   "Can edit": "Kan redigera",
   "No access": "Ingen access",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Tyvärr, ett fel har uppstått.",
   "Click to retry": "Klicka för att försöka igen",
   "Back": "Tillbaka",
+  "Notification options": "Notification options",
   "Unknown": "Okänd",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Markera alla som lästa",
   "You're all caught up": "Inga olästa meddelanden",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikon",
   "OAuth client icon": "OAuth klient ikon",
   "My App": "Min app",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Ta bort inbäddning",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Kan inte importera fil",
   "Unsubscribed from document": "Prenumeration avslutad från dokument",
   "Unsubscribed from collection": "Avprenumerera från samling",
@@ -597,6 +630,9 @@
   "Comment options": "Alternativ för kommentarer",
   "Enable viewer insights": "Aktivera tittarinsikter",
   "Enable embeds": "Aktivera inbäddningar",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fil",
   "Group members": "Gruppmedlemmar",
   "Edit group": "Redigera grupp",
@@ -647,9 +683,9 @@
   "30 days": "30 dagar",
   "60 days": "60 dagar",
   "90 days": "90 dagar",
-  "Custom": "Egendefinerad",
   "No expiration": "Ingen utgång",
   "The document archive is empty at the moment.": "Dokumentarkivet är för närvarande tomt.",
+  "Done editing": "Redigering klar",
   "Drop documents to import": "Släpp dokument att importera",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> innehåller inga\n                    -dokument ännu.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} användare och {{ groupsCount }} grupper med åtkomst",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} användare med behörighet",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupp med behörighet",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupper med behörighet",
-  "Archived by {{userName}}": "Arkiverad av {{userName}}",
-  "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
-  "Add a description": "Lägg till en beskrivning",
   "Overview": "Översikt",
   "Popular": "Popular",
   "Recently updated": "Nyligen uppdaterad",
   "Recently published": "Nyligen publicerade",
   "Least recently updated": "Äldst uppdaterade",
   "A–Z": "A-Ö",
+  "Archived by {{userName}}": "Arkiverad av {{userName}}",
+  "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
+  "Add a description": "Lägg till en beskrivning",
   "Signing in": "Loggar in",
   "You can safely close this window once the Outline desktop app has opened": "Du kan stänga detta fönster säkert när appen Outline har öppnat",
   "Error creating comment": "Fel vid skapande av kommentar",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Redigera {{noun}}",
   "Archived": "Arkiverad",
   "Save draft": "Spara utkast",
-  "Done editing": "Redigering klar",
   "Restore version": "Återställ version",
   "No history yet": "Ingen historik än",
   "Source": "Källa",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Nämn användare och mer",
-  "Emoji": "Emoji",
   "Insert block": "Infoga block",
   "Sign In": "Logga in",
   "Continue with Email": "Fortsätt med e-post",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Visas för användare vid auktorisering",
   "Application icon": "Applikationsikon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Utvecklarnamn",
   "Developer URL": "Utvecklar-URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Din import bearbetas, du kan lämna denna sidan",
   "File not supported – please upload a valid ZIP file": "Filen stöds inte – ladda upp en giltig ZIP-fil",
   "Set the default permission level for collections created from the import": "Ange standard behörighetsnivå för samlingar som skapats från importen",
-  "Uploading": "Laddar upp",
   "Start import": "Starta import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Bearbetar",
   "Expired": "Utgånget",
   "Completed": "Slutförd",
@@ -1060,6 +1099,8 @@
   "Editors": "Redigerare",
   "All status": "Alla statusar",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vänster",
   "Right": "Höger",
   "Settings saved": "Inställningarna sparades",
