--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Belgeden ayrılamadı",
   "Apply template": "Şablonu uygula",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Bağlantıyı kes",
   "Disconnect analytics": "Analitiği kes",
   "Home": "Anasayfa",
@@ -136,6 +138,8 @@
   "Log out": "Oturumu kapat",
   "Mark notifications as read": "Bildirimleri okundu olarak işaretle",
   "Archive all notifications": "Tüm bildirimleri arşivle",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Yeni Uygulama",
   "New Application": "Yeni Uygulama",
   "This version of the document was deleted": "Belgenin bu sürümü silindi",
@@ -172,6 +176,7 @@
   "Navigation": "Navigasyon",
   "Notification": "Bildirim",
   "Groups": "Gruplar",
+  "Emoji": "Emoji",
   "People": "Kullanıcılar",
   "Share": "Paylaş",
   "Workspace": "Çalışma Alanı",
@@ -253,6 +258,22 @@
   "Currently editing": "Şu anda düzenliyor",
   "Currently viewing": "Şu anda görüntülüyor",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} tarihinde görüntülendi",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Yükleniyor",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Bir görsel yükle",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modül yüklenemedi",
   "Loading Failed": "Yükleme Başarısız Oldu",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maalesef uygulamanın bir kısmı yüklenemedi. Bunun nedeni, sekmeyi açtığınızdan beri güncellenmiş olması veya başarısız bir ağ isteği olabilir. Lütfen yeniden yüklemeyi deneyin.",
@@ -311,6 +332,7 @@
   "Objects": "Nesneler",
   "Symbols": "Semboller",
   "Flags": "Bayraklar",
+  "Custom": "Özel",
   "View only": "Sadece görüntüle",
   "Can edit": "Düzenleyebilir",
   "No access": "Erişim yok",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Üzgünüz, bir hata oluştu.",
   "Click to retry": "Tekrar denemek için tıklayın",
   "Back": "Geri",
+  "Notification options": "Notification options",
   "Unknown": "Bilinmeyen",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Tümünü okundu olarak işaretle",
   "You're all caught up": "Tüm bildirimleri gördünüz",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Simge",
   "OAuth client icon": "OAuth istemci simgesi",
   "My App": "Uygulamam",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Hiçbiri",
   "Delete embed": "Yerleştirmeyi sil",
-  "Upload an image": "Bir görsel yükle",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Dosya içe aktarılamadı",
   "Unsubscribed from document": "Belgeden abonelik iptal edildi",
   "Unsubscribed from collection": "Koleksiyondan abonelik iptal edildi",
@@ -597,6 +630,9 @@
   "Comment options": "Yorum seçenekleri",
   "Enable viewer insights": "İzleyici analizlerini etkinleştir",
   "Enable embeds": "Yerleştirmeleri etkinleştir",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Dosya",
   "Group members": "Grup üyeleri",
   "Edit group": "Grubu düzenle",
@@ -647,9 +683,9 @@
   "30 days": "30 gün",
   "60 days": "60 gün",
   "90 days": "90 gün",
-  "Custom": "Özel",
   "No expiration": "Sona erme yok",
   "The document archive is empty at the moment.": "Belge arşivi şu anda boş.",
+  "Done editing": "Düzenleme bitti",
   "Drop documents to import": "İçe aktarmak için belgeleri buraya bırakın",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> henüz belge içermiyor.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "erişimi olan {{ usersCount }} kullanıcı ve {{ groupsCount }} grup",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "erişimi olan {{ usersCount }} kullanıcı",
   "{{ groupsCount }} groups with access": "erişimi olan {{ groupsCount }} grup",
   "{{ groupsCount }} groups with access_plural": "erişimi olan {{ groupsCount }} grup",
-  "Archived by {{userName}}": "{{userName}} tarafından arşivlendi",
-  "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
-  "Add a description": "Bir açıklama ekle",
   "Overview": "Genel Bakış",
   "Popular": "Popular",
   "Recently updated": "Yakın zamanda güncellenen",
   "Recently published": "Yakın zamanda yayınlanan",
   "Least recently updated": "En az yakın zamanda güncellenen",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "{{userName}} tarafından arşivlendi",
+  "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
+  "Add a description": "Bir açıklama ekle",
   "Signing in": "Giriş yapılıyor",
   "You can safely close this window once the Outline desktop app has opened": "Outline masaüstü uygulaması açıldıktan sonra bu pencereyi güvenle kapatabilirsiniz",
   "Error creating comment": "Yorum oluşturulurken hata oluştu",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "{{noun}} düzenle",
   "Archived": "Arşivlendi",
   "Save draft": "Taslağı kaydet",
-  "Done editing": "Düzenleme bitti",
   "Restore version": "Sürümü geri yükle",
   "No history yet": "Henüz tarihçe yok",
   "Source": "Kaynak",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Satır içi LaTeX",
   "Triggers": "Tetikleyiciler",
   "Mention users and more": "Kullanıcılardan ve daha fazlasından bahset",
-  "Emoji": "Emoji",
   "Insert block": "Blok ekle",
   "Sign In": "Giriş Yap",
   "Continue with Email": "E-posta ile devam et",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "İstemci gizlisini döndürmek, mevcut gizliyi geçersiz kılacaktır. Bu kimlik bilgilerini kullanan tüm uygulamaları güncellediğinizden emin olun.",
   "Displayed to users when authorizing": "Yetkilendirilirken kullanıcılara gösterilir",
   "Application icon": "Uygulama simgesi",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Yetkilendirilirken kullanıcılara gösterilen geliştirici bilgileri",
   "Developer name": "Geliştirici adı",
   "Developer URL": "Geliştirici URL'si",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "İçe aktarımınız işleniyor, bu sayfadan güvenle ayrılabilirsiniz",
   "File not supported – please upload a valid ZIP file": "Dosya desteklenmiyor – lütfen geçerli bir ZIP dosyası yükleyin",
   "Set the default permission level for collections created from the import": "İçe aktarımdan oluşturulan koleksiyonlar için varsayılan izin düzeyini belirleyin",
-  "Uploading": "Yükleniyor",
   "Start import": "İçe aktarmayı başlat",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "İşleniyor",
   "Expired": "Süresi doldu",
   "Completed": "Tamamlandı",
@@ -1060,6 +1099,8 @@
   "Editors": "Düzenleyiciler",
   "All status": "Tüm durumlar",
   "Active": "Aktif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Sol",
   "Right": "Sağ",
   "Settings saved": "Ayarlar kaydedildi",
