--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
   "Apply template": "Áp dụng mẫu",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Ngắt kết nối",
   "Disconnect analytics": "Ngắt kết nối thống kê",
   "Home": "Trang chủ",
@@ -136,6 +138,8 @@
   "Log out": "Đăng xuất",
   "Mark notifications as read": "Đánh dấu thông báo là đã đọc",
   "Archive all notifications": "Lưu trữ tất cả thông báo",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Tạo App",
   "New Application": "Ứng dụng mới",
   "This version of the document was deleted": "Phiên bản của tài liệu đã bị xóa",
@@ -172,6 +176,7 @@
   "Navigation": "Điều hướng",
   "Notification": "Thông báo",
   "Groups": "Nhóm",
+  "Emoji": "Emoji",
   "People": "Người tham gia",
   "Share": "Chia sẻ",
   "Workspace": "Workspace",
@@ -253,6 +258,22 @@
   "Currently editing": "Hiện đang chỉnh sửa",
   "Currently viewing": "Hiện đang xem",
   "Viewed {{ timeAgo }}": "Đã xem {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Đang tải lên",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Không tải được Module",
   "Loading Failed": "Tải không thành công",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Xin lỗi, một phần của ứng dụng không tải được. Điều này có thể là do nó đã được cập nhật kể từ khi bạn mở tab hoặc do yêu cầu mạng không thành công. Vui lòng thử tải lại.",
@@ -311,6 +332,7 @@
   "Objects": "Đối tượng",
   "Symbols": "Biểu tượng",
   "Flags": "Cờ",
+  "Custom": "Tuỳ chỉnh",
   "View only": "Chỉ xem",
   "Can edit": "Có thể chỉnh sửa",
   "No access": "Không có quyền truy cập",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Xin lỗi, đã xảy ra lỗi.",
   "Click to retry": "Nhấp để thử lại",
   "Back": "Quay Lại",
+  "Notification options": "Notification options",
   "Unknown": "Không xác định",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Đánh dấu tất cả là đã đọc",
   "You're all caught up": "Bạn đã xem hết",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "Ứng dụng của tôi",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Không",
   "Delete embed": "Xóa phần nhúng",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -597,6 +630,9 @@
   "Comment options": "Tùy chọn bình luận",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Enable embeds": "Bật tính năng nhúng",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Tập tin",
   "Group members": "Thành viên trong nhóm",
   "Edit group": "Chỉnh sửa nhóm",
@@ -647,9 +683,9 @@
   "30 days": "30 ngày",
   "60 days": "60 ngày",
   "90 days": "90 ngày",
-  "Custom": "Tuỳ chỉnh",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Kho lưu trữ tài liệu hiện đang trống.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Thả tài liệu để nhập",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> chưa có\n                    tài liệu nào.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} người dùng và {{ groupsCount }} nhóm có quyền truy cập",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} người dùng có quyền truy cập",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} nhóm có quyền truy cập",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} nhóm có quyền truy cập",
-  "Archived by {{userName}}": "Được lưu trữ bởi {{userName}}",
-  "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
-  "Add a description": "Thêm mô tả",
   "Overview": "Tổng quan",
   "Popular": "Popular",
   "Recently updated": "Mới cập nhật",
   "Recently published": "Mới đăng tải",
   "Least recently updated": "Cập nhật ít nhất gần đây",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Được lưu trữ bởi {{userName}}",
+  "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
+  "Add a description": "Thêm mô tả",
   "Signing in": "Đang đăng nhập",
   "You can safely close this window once the Outline desktop app has opened": "Bạn có thể đóng cửa sổ này một cách an toàn sau khi ứng dụng Outline trên máy tính đã mở",
   "Error creating comment": "Lỗi khi tạo bình luận",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Chỉnh sửa {{noun}}",
   "Archived": "Đã lưu trữ",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Khôi phục phiên bản",
   "No history yet": "Chưa có lịch sử",
   "Source": "Nguồn",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX nội tuyến",
   "Triggers": "Yếu tố kích hoạt",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Chèn khối",
   "Sign In": "Đăng nhập",
   "Continue with Email": "Tiếp tục với email",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Quá trình nhập của bạn đang được xử lý, bạn có thể rời khỏi trang này một cách an toàn",
   "File not supported – please upload a valid ZIP file": "Tệp không được hỗ trợ - vui lòng tải lên tệp ZIP hợp lệ",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Đang tải lên",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Đang xử lý",
   "Expired": "Hết hạn",
   "Completed": "Hoàn thành",
@@ -1060,6 +1099,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Hoạt động",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Đã lưu cài đặt",
