--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "解除連結",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "首頁",
@@ -136,6 +138,8 @@
   "Log out": "登出",
   "Mark notifications as read": "標記所有通知為已讀",
   "Archive all notifications": "封存所有通知",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -172,6 +176,7 @@
   "Navigation": "導覽",
   "Notification": "通知",
   "Groups": "群組",
+  "Emoji": "Emoji",
   "People": "人員",
   "Share": "分享",
   "Workspace": "工作空間",
@@ -253,6 +258,22 @@
   "Currently editing": "正在編輯",
   "Currently viewing": "正在瀏覽",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 前瀏覽過",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "正在上傳",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模組載入失敗",
   "Loading Failed": "載入失敗",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "抱歉，部分應用程式載入失敗。有可能是因為在您打開分頁後被更新過，或是網路連線請求失敗。請嘗試重新載入。",
@@ -311,6 +332,7 @@
   "Objects": "物品",
   "Symbols": "符號",
   "Flags": "旗幟",
+  "Custom": "自訂",
   "View only": "只可檢視",
   "Can edit": "可以編輯",
   "No access": "無存取權限",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "抱歉，發生錯誤。",
   "Click to retry": "按此重新嘗試",
   "Back": "上一步",
+  "Notification options": "Notification options",
   "Unknown": "未知",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全部標記為已讀",
   "You're all caught up": "已看完所有評論！",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -575,7 +607,8 @@
   "Video": "影片",
   "None": "無",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "無法匯入檔案",
   "Unsubscribed from document": "取消訂閱文件",
   "Unsubscribed from collection": "取消訂閱文件",
@@ -597,6 +630,9 @@
   "Comment options": "評論選項",
   "Enable viewer insights": "啟用瀏覽者洞察分析",
   "Enable embeds": "啟用嵌入物件",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "群組成員",
   "Edit group": "編輯群組",
@@ -647,9 +683,9 @@
   "30 days": "30 天",
   "60 days": "60 天",
   "90 days": "90 天",
-  "Custom": "自訂",
   "No expiration": "沒有期限",
   "The document archive is empty at the moment.": "目前沒有任何文件被封存。",
+  "Done editing": "編輯完成",
   "Drop documents to import": "拖曳文件以進行匯入",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 中還沒有任何文件。",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} 位使用者和 {{ groupsCount }} 群組具有存取權限",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} 個使用者擁有存取權限",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} 個群組擁有存取權限",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} 個群組擁有存取權限",
-  "Archived by {{userName}}": "已由 {{userName}} 封存",
-  "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
-  "Add a description": "新增描述",
   "Overview": "概覽",
   "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近發布",
   "Least recently updated": "很久以前更新",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "已由 {{userName}} 封存",
+  "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
+  "Add a description": "新增描述",
   "Signing in": "正在登入",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面應用程式打開後，您可以安全地關閉此視窗",
   "Error creating comment": "留言時發生錯誤",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "編輯 {{noun}}",
   "Archived": "已封存",
   "Save draft": "儲存草稿",
-  "Done editing": "編輯完成",
   "Restore version": "還原版本",
   "No history yet": "暫無歷史紀錄",
   "Source": "來源",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "行內 LaTeX",
   "Triggers": "觸發器",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "插入區塊",
   "Sign In": "登入",
   "Continue with Email": "使用電子郵件以繼續",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "您的匯入正在處理中，您可以安全地離開此頁面",
   "File not supported – please upload a valid ZIP file": "該文件不被支持 - 請上傳有效的 ZIP 壓縮文件",
   "Set the default permission level for collections created from the import": "為從匯入建立的文件集建立預設權限",
-  "Uploading": "正在上傳",
   "Start import": "開始匯入",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "正在處理",
   "Expired": "已逾時",
   "Completed": "已完成",
@@ -1060,6 +1099,8 @@
   "Editors": "編輯者",
   "All status": "所有狀態",
   "Active": "上線",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "設定已儲存",
