--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Nový API klíč",
   "Delete": "Odstranit",
   "Revoke": "Zrušit",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Zrušit API klíč",
   "Revoke token": "Odvolat tokeny",
   "Open collection": "Otevřít sbírku",
   "New collection": "Nová sbírka",
@@ -14,8 +14,8 @@
   "Share this collection": "Sdílet tuto kolekci",
   "Import document": "Importovat dokument",
   "Sort in sidebar": "Seřadit v postranním panelu",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
+  "A-Z sort": "Seřadit A-Z",
+  "Z-A sort": "Seřadit Z-A",
   "Manual sort": "Manuální řazení",
   "Search in collection": "Hledat ve sbírce",
   "Star": "Přidat mezi oblíbené",
@@ -45,8 +45,8 @@
   "Copy ID": "Kopírovat ID",
   "Clear IndexedDB cache": "Smazat mezipaměť IndexedDB",
   "IndexedDB cache cleared": "Mezipaměť indexedDB vymazána",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Vymazat místní úložiště",
+  "Local storage cleared": "Místní úložiště vyčištěno",
   "Toggle debug logging": "Toggle debug logging",
   "Debug logging enabled": "Zaznamenávání logů povoleno",
   "Debug logging disabled": "Zaznamenávání logů zakázáno",
@@ -60,7 +60,7 @@
   "Publish document": "Zveřejnit dokument",
   "Unpublish": "Zrušit zveřejnění",
   "Unpublished {{ documentName }}": "Nepublikováno {{ documentName }}",
-  "Subscription inherited from collection": "Subscription inherited from collection",
+  "Subscription inherited from collection": "Přístup zděděný z kolekce",
   "Share this document": "Sdílet tento dokument",
   "HTML": "HTML",
   "PDF": "PDF",
@@ -70,8 +70,8 @@
   "Download document": "Stáhnout dokument",
   "Copy as Markdown": "Kopírovat jako Markdown",
   "Markdown copied to clipboard": "Markdown zkopírován do schránky",
-  "Copy as text": "Copy as text",
-  "Text copied to clipboard": "Text copied to clipboard",
+  "Copy as text": "Kopírovat jako text",
+  "Text copied to clipboard": "Text byl zkopírován do schránky",
   "Copy public link": "Zkopírovat veřejný odkaz",
   "Link copied to clipboard": "Odkaz zkopírován do schránky",
   "Copy link": "Kopírovat odkaz",
@@ -99,7 +99,7 @@
   "Are you sure you want to archive this document?": "Opravdu chcete archivovat tento dokument?",
   "Document archived": "Dokument archivován",
   "Archiving this document will remove it from the collection and search results.": "Archivací tento dokument odstraníte z kolekce a výsledků vyhledávání.",
-  "{{ documentName }} restored": "{{ documentName }} restored",
+  "{{ documentName }} restored": "{{ documentName }} byl obnoven",
   "Choose a collection": "Vybrat sbírku",
   "Delete {{ documentName }}": "Odstranit {{ documentName }}",
   "Permanently delete": "Trvale odstranit",
@@ -112,9 +112,11 @@
   "Leave document": "Opustit dokument",
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
-  "Apply template": "Apply template",
+  "Apply template": "Použít šablonu",
+  "New emoji": "Nové emoji",
+  "Upload emoji": "Nahrát emoji",
   "Disconnect": "Odpojit",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "Odpojit analytiku",
   "Home": "Domovská stránka",
   "Drafts": "Koncepty",
   "Search": "Hledat",
@@ -136,9 +138,11 @@
   "Log out": "Odhlásit se",
   "Mark notifications as read": "Označit upozornění jako přečtená",
   "Archive all notifications": "Archivovat všechny notifikace",
-  "New App": "New App",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
+  "New App": "Nová aplikace",
+  "New Application": "Nová žádost",
+  "This version of the document was deleted": "Tato verze dokumentu byla smazána",
   "Link copied": "Odkaz zkopírován",
   "Dark": "Temný",
   "Light": "Světlý",
@@ -147,7 +151,7 @@
   "Change theme": "Změnit motiv",
   "Change theme to": "Změnit motiv na",
   "Share link copied": "Odkaz pro sdílení zkopírován",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Přejít ke sbírce",
   "Go to document": "Přejít do dokumentu",
   "Revoke link": "Zrušit odkaz",
   "Share link revoked": "Odkaz na sdílení zrušen",
@@ -172,6 +176,7 @@
   "Navigation": "Menu",
   "Notification": "Upozornění ",
   "Groups": "Skupiny",
+  "Emoji": "Emoji",
   "People": "Lidé",
   "Share": "Sdílet",
   "Workspace": "Pracovní prostor",
@@ -180,7 +185,7 @@
   "currently viewing": "právě prohlíží",
   "previously edited": "dříve upraveno",
   "You": "Vy",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar {{ name }}",
   "Viewers": "Prohlížející",
   "Collections are used to group documents and choose permissions": "Kolekce se používají pro seskupení dokumentů a volbu spojených oprávnění",
   "Name": "Jméno",
@@ -188,7 +193,7 @@
   "Public document sharing": "Veřejné sdílení dokumentů",
   "Allow documents within this collection to be shared publicly on the internet.": "Je-li povoleno, jakékoli dokumenty v této sbírce lze sdílet veřejně na internetu.",
   "Commenting": "Komentování",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Povolit komentování dokumentů v rámci této sbírky.",
   "Saving": "Uložení",
   "Save": "Uložit",
   "Creating": "Vytváření",
@@ -253,15 +258,31 @@
   "Currently editing": "Právě upravuje",
   "Currently viewing": "Právě prohlíží",
   "Viewed {{ timeAgo }}": "Zobrazeno před {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Tento typ souboru není podporován. Použijte prosím PNG, JPG, GIF nebo WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Velikost souboru je příliš velká. Maximální velikost je {{ size }}.",
+  "Please enter a name for the emoji": "Zadejte název pro emoji",
+  "Please select an image file": "Vyberte prosím obrázek",
+  "Emoji created successfully": "Emoji byl úspěšně vytvořen",
+  "Uploading": "Nahrávání",
+  "Add emoji": "Přidat emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Nahrát obrázek",
+  "Click or drag to replace": "Kliknutím nebo přetažením nahradíte",
+  "Drop the image here": "Sem přetáhněte obrázek",
+  "Click, drop, or paste an image here": "Klikněte, pošlete nebo vložte obrázek sem",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF nebo WebP až do {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "název může obsahovat pouze malá písmena, číslice a podtržítka.",
+  "This emoji will be available as": "Toto emoji bude k dispozici jako",
   "Module failed to load": "Modul se nepodařilo načíst",
   "Loading Failed": "Načítání selhalo",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Litujeme, část aplikace se nepodařilo načíst. Může to být způsobeno tím, že byla aktualizována od chvíle, kdy jste kartu otevřeli, nebo kvůli neúspěšnému síťovému požadavku. Zkuste znovu načíst.",
   "Reload": "Znovu načíst",
   "Something Unexpected Happened": "Stalo se něco nečekaného",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Několikrát došlo k chybě. Pokud bude pokračovat, zkuste vymazat mezipaměť nebo použijte jiný prohlížeč.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Omlouváme se, došlo k neopravitelné chybě{{notified}}. Zkuste prosím stránku znovu načíst, může to být dočasná závada.",
   "our engineers have been notified": "naši technici byli upozorněni",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Vymazat mezipaměť + znovu načíst",
   "Show detail": "Zobrazit podrobnosti",
   "{{userName}} archived": "{{userName}} archivoval",
   "{{userName}} restored": "{{userName}} obnovil",
@@ -282,14 +303,14 @@
   "You will receive an email when it's complete.": "Po dokončení obdržíte e-mail.",
   "Include attachments": "Zahrnout přílohy",
   "Including uploaded images and files in the exported data": "Zahrnout nahrané obrázky a soubory do exportovaných dat",
-  "Include private collections": "Include private collections",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
-  "Filter options": "Filter options",
+  "Include private collections": "Zahrnout soukromé sbírky",
+  "{{count}} more user": "{{count}} uživatel navíc",
+  "{{count}} more user_plural": "{{count}} uživatelů navíc",
+  "Filter options": "Volby filtru",
   "Filter": "Filtr",
   "No results": "Žádné výsledky",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
+  "{{ count }} members": "{{ count }} člen",
+  "{{ count }} members_plural": "{{ count }} členů",
   "{{authorName}} created <3></3>": "{{authorName}} vytvořil <3></3>",
   "{{authorName}} opened <3></3>": "{{authorName}} otevřel <3></3>",
   "Search emoji": "Hledat emoji",
@@ -311,29 +332,40 @@
   "Objects": "Objekty",
   "Symbols": "Symboly",
   "Flags": "Vlajky",
+  "Custom": "Vlastní",
   "View only": "Pouze zobrazit",
   "Can edit": "Může upravovat",
   "No access": "Bez přístupu",
   "Permission": "Oprávnění",
   "Change Language": "Změnit jazyk",
   "Dismiss": "Zavřít",
-  "Unable to download image": "Unable to download image",
-  "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
-  "Edit diagram": "Edit diagram",
+  "Unable to download image": "Nepodařilo se stáhnout obrázek",
+  "Lightbox": "LightBox",
+  "View, navigate, or download images in the document": "Zobrazit, navigovat nebo stáhnout obrázky v dokumentu",
+  "Zoom in": "Přiblížit",
+  "Zoom out": "Oddálit",
+  "Edit diagram": "Upravit diagram",
   "Close": "Zavřít",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Předchozí",
+  "Next": "Následující",
+  "Image failed to load": "Obrázek se nepodařilo načíst",
   "You’re offline.": "Jste offline.",
   "Sorry, an error occurred.": "Je nám líto, došlo k chybě.",
   "Click to retry": "Kliknutím zkuste znovu",
   "Back": "Zpět",
+  "Notification options": "Notification options",
   "Unknown": "Neznámý",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Označit vše jako přečtené",
   "You're all caught up": "Již nic nového",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -555,12 +587,12 @@
   "Sort ascending": "Seřadit vzestupně",
   "Sort descending": "Seřadit sestupně",
   "Table": "Tabulka",
-  "Export as CSV": "Export as CSV",
-  "Toggle header": "Toggle header",
+  "Export as CSV": "Export do CSV",
+  "Toggle header": "Přepnout záhlaví",
   "Math inline (LaTeX)": "Matematický vzorec (LaTeX)",
   "Math block (LaTeX)": "Matematický vzorec (LaTeX)",
-  "Merge cells": "Merge cells",
-  "Split cell": "Split cell",
+  "Merge cells": "Sloučit buňky",
+  "Split cell": "Rozdělit buňku",
   "Tip": "Tip",
   "Tip notice": "Tip",
   "Warning": "Varování",
@@ -573,41 +605,45 @@
   "Indent": "Odsazení",
   "Outdent": "Předsazení",
   "Video": "Video",
-  "None": "None",
-  "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "None": "Žádný",
+  "Delete embed": "Odstranit vložené",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
-  "Unsubscribed from collection": "Unsubscribed from collection",
+  "Unsubscribed from collection": "Odhlásit ze sbírky",
   "Account": "Účet",
-  "API & Apps": "API & Apps",
+  "API & Apps": "API & Aplikace",
   "Details": "Podrobnosti",
   "Security": "Zabezpečení",
   "Features": "Funkce",
   "Members": "Uživatelé",
-  "API Keys": "API Keys",
-  "Applications": "Applications",
+  "API Keys": "API klíče",
+  "Applications": "Žádosti",
   "Shared Links": "Sdílené odkazy",
   "Import": "Import",
-  "Install": "Install",
+  "Install": "Instalovat",
   "Integrations": "Integrace",
-  "API key": "API key",
+  "API key": "API klíč",
   "Show path to document": "Zobrazit cestu k dokumentu",
   "Collection menu": "Nabídka sbírek",
   "Comment options": "Nastavení komentářů",
   "Enable viewer insights": "Zapnout analytika nahlížení",
   "Enable embeds": "Povolit embed vkládání",
-  "File": "File",
+  "Delete Emoji": "Smazat emoji",
+  "Emoji deleted": "Emoji smazáno",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Jste si jisti, že chcete odstranit emoji <em>{{emojiName}}</em>? Již ho nebudete moci používat ve svých dokumentech nebo sbírkách.",
+  "File": "Soubor",
   "Group members": "Členové skupiny",
   "Edit group": "Upravit skupinu",
   "Delete group": "Odstranit skupinu",
   "Group options": "Nastavení skupin",
   "Cancel": "Zrušit",
-  "Import menu options": "Import menu options",
+  "Import menu options": "Importovat možnosti nabídky",
   "New document in <em>{{ collectionName }}</em>": "Nový dokument v <em>{{ collectionName }}</em>",
   "New child document": "Nový vložený dokument",
-  "Save in workspace": "Save in workspace",
-  "Revoke {{ appName }}": "Revoke {{ appName }}",
+  "Save in workspace": "Uložit do pracovního prostoru",
+  "Revoke {{ appName }}": "Odebrat {{ appName }}",
   "Revoking": "Odvolávání",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
@@ -647,9 +683,9 @@
   "30 days": "30 dní",
   "60 days": "60 dní",
   "90 days": "90 dní",
-  "Custom": "Vlastní",
   "No expiration": "Bez data vypršení platnosti",
   "The document archive is empty at the moment.": "Archiv dokumentů je v tuto chvíli prázdný.",
+  "Done editing": "Uložit úpravy",
   "Drop documents to import": "Přetáhněte dokumenty k importu",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> zatím neobsahuje žádné dokumenty.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} uživatel a {{ groupsCount }} skupiny s přístupem",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} uživatelů s přístupem",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} skupina s přístupem",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} skupin s přístupem",
-  "Archived by {{userName}}": "Archivoval {{userName}}",
-  "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
-  "Add a description": "Přidat popis",
   "Overview": "Přehled",
   "Popular": "Popular",
   "Recently updated": "Nedávno aktualizováno",
   "Recently published": "Nedávno zveřejněné",
   "Least recently updated": "Naposledy aktualizováno",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archivoval {{userName}}",
+  "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
+  "Add a description": "Přidat popis",
   "Signing in": "Přihlašování",
   "You can safely close this window once the Outline desktop app has opened": "Po otevření desktopové aplikace Outline můžete toto okno bezpečně zavřít",
   "Error creating comment": "Chyba při vytváření komentáře",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Upravit {{noun}}",
   "Archived": "Archivované",
   "Save draft": "Uložit koncept",
-  "Done editing": "Uložit úpravy",
   "Restore version": "Obnovit verzi",
   "No history yet": "Zatím žádná historie",
   "Source": "Zdroj",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Vložený LaTeX",
   "Triggers": "Akce",
   "Mention users and more": "Zmínit uživatele a další",
-  "Emoji": "Emoji",
   "Insert block": "Přidat blok",
   "Sign In": "Přihlásit se",
   "Continue with Email": "Pokračovat pomocí e-mailu",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Váš import se zpracovává, můžete tuto stránku bezpečně opustit",
   "File not supported – please upload a valid ZIP file": "Soubor není podporován – nahrajte prosím platný soubor ZIP",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Nahrávání",
   "Start import": "Spustit import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Zpracovává se",
   "Expired": "Vypršel",
   "Completed": "Dokončeno",
@@ -1060,6 +1099,8 @@
   "Editors": "Editoři",
   "All status": "All status",
   "Active": "Aktivní",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vlevo",
   "Right": "Vpravo",
   "Settings saved": "Nastavení uloženo",
