--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
   "Apply template": "Appliquer le modèle",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Se déconnecter",
   "Disconnect analytics": "Déconnecter les statistiques",
   "Home": "Accueil",
@@ -136,6 +138,8 @@
   "Log out": "Déconnexion",
   "Mark notifications as read": "Marquer les notifications comme lues",
   "Archive all notifications": "Archiver toutes les notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nouvelle application",
   "New Application": "Nouvelle application",
   "This version of the document was deleted": "Cette version du document a été supprimée",
@@ -172,6 +176,7 @@
   "Navigation": "Navigation",
   "Notification": "Notification",
   "Groups": "Groupes",
+  "Emoji": "Émoticône",
   "People": "Personnes",
   "Share": "Partager",
   "Workspace": "Espace de travail",
@@ -253,6 +258,22 @@
   "Currently editing": "En cours de modification",
   "Currently viewing": "En train de consulter",
   "Viewed {{ timeAgo }}": "Vu il y a {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Transfert en cours",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Ajouter une image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Le module n'a pas pu être chargé",
   "Loading Failed": "Échec du chargement",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Désolé, le chargement d'une partie de l'application a échoué. C'est probablement dû au fait qu'elle a été mise à jour depuis que vous avez ouvert l'onglet, ou en raison d'une requête réseau échouée. Essayez d'actualiser la page.",
@@ -311,6 +332,7 @@
   "Objects": "Objets",
   "Symbols": "Symboles",
   "Flags": "Drapeaux",
+  "Custom": "Personnalisé",
   "View only": "Voir seulement",
   "Can edit": "Peut modifier",
   "No access": "Pas d'accès",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Désolé, une erreur est survenue.",
   "Click to retry": "Cliquez pour réessayer",
   "Back": "Retour",
+  "Notification options": "Notification options",
   "Unknown": "Inconnu",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icône",
   "OAuth client icon": "Icône du client OAuth",
   "My App": "Mon application",
@@ -575,7 +607,8 @@
   "Video": "Vidéo",
   "None": "Abc",
   "Delete embed": "Supprimer l'intégration",
-  "Upload an image": "Ajouter une image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
@@ -597,6 +630,9 @@
   "Comment options": "Options des commentaires",
   "Enable viewer insights": "Activer le visualisateur d'analyses",
   "Enable embeds": "Activer les intégrations",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fichier",
   "Group members": "Membres du groupe",
   "Edit group": "Modifier le groupe",
@@ -647,9 +683,9 @@
   "30 days": "30 jours",
   "60 days": "60 jours",
   "90 days": "90 jours",
-  "Custom": "Personnalisé",
   "No expiration": "Pas d'expiration",
   "The document archive is empty at the moment.": "Les archives sont vides pour le moment.",
+  "Done editing": "Édition terminée",
   "Drop documents to import": "Déposer les documents à importer",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> ne contient aucun document.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} utilisateur et {{ groupsCount }} groupes ont accès",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} utilisateurs avec accès",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} groupe a accès",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groupes ont accès",
-  "Archived by {{userName}}": "Archivé par {{userName}}",
-  "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
-  "Add a description": "Ajouter une description",
   "Overview": "Aperçu",
   "Popular": "Populaire",
   "Recently updated": "Récemment mis à jour",
   "Recently published": "Récemment publiés",
   "Least recently updated": "Anciennement modifiés",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Archivé par {{userName}}",
+  "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
+  "Add a description": "Ajouter une description",
   "Signing in": "Connexion en cours",
   "You can safely close this window once the Outline desktop app has opened": "Vous pouvez fermer cette fenêtre en toute sécurité après que l'application bureau Outline s'est ouverte",
   "Error creating comment": "Erreur lors de la création du commentaire",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Éditer {{noun}}",
   "Archived": "Archivé",
   "Save draft": "Enregistrer le brouillon",
-  "Done editing": "Édition terminée",
   "Restore version": "Restaurer cette version",
   "No history yet": "Pas encore d'historique",
   "Source": "Source",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "LaTeX en ligne",
   "Triggers": "Alertes",
   "Mention users and more": "Mentionner les utilisateurs et plus",
-  "Emoji": "Émoticône",
   "Insert block": "Insérer un bloc",
   "Sign In": "Se connecter",
   "Continue with Email": "Continuer avec un e-mail",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotation du secret client invalidera le secret actuel. Assurez-vous de mettre à jour toutes les applications utilisant ces identifiants.",
   "Displayed to users when authorizing": "Affiché aux utilisateurs lors de l'autorisation",
   "Application icon": "Icône de l'application",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informations du développeur affichées aux utilisateurs lors de l'autorisation",
   "Developer name": "Nom du développeur",
   "Developer URL": "URL de développement",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Votre importation est en cours, vous pouvez quitter cette page en toute sécurité",
   "File not supported – please upload a valid ZIP file": "Fichier non pris en charge - veuillez téléverser un fichier ZIP valide",
   "Set the default permission level for collections created from the import": "Définir le niveau de permission par défaut pour les collections créées à partir de l'importation",
-  "Uploading": "Transfert en cours",
   "Start import": "Démarrer l'importation",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Traitement en cours",
   "Expired": "Expiré",
   "Completed": "Terminé",
@@ -1060,6 +1099,8 @@
   "Editors": "Éditeurs",
   "All status": "Tous les statuts",
   "Active": "Actif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Gauche",
   "Right": "Droite",
   "Settings saved": "Paramètres enregistrés",
