--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Disconnect",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "בית",
@@ -136,6 +138,8 @@
   "Log out": "Log out",
   "Mark notifications as read": "Mark notifications as read",
   "Archive all notifications": "Archive all notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -172,6 +176,7 @@
   "Navigation": "סרגל ניווט",
   "Notification": "התראה",
   "Groups": "קבוצות",
+  "Emoji": "Emoji",
   "People": "משתתפים",
   "Share": "שיתוף",
   "Workspace": "סביבות עבודה",
@@ -253,6 +258,22 @@
   "Currently editing": "Currently editing",
   "Currently viewing": "Currently viewing",
   "Viewed {{ timeAgo }}": "Viewed {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Uploading",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Module failed to load",
   "Loading Failed": "טעינה נכשלה",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.",
@@ -311,6 +332,7 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
+  "Custom": "Custom",
   "View only": "View only",
   "Can edit": "Can edit",
   "No access": "No access",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Sorry, an error occurred.",
   "Click to retry": "Click to retry",
   "Back": "Back",
+  "Notification options": "Notification options",
   "Unknown": "Unknown",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth client icon",
   "My App": "My App",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -597,6 +630,9 @@
   "Comment options": "Comment options",
   "Enable viewer insights": "הפעלת תובנות צופים",
   "Enable embeds": "Enable embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Group members",
   "Edit group": "Edit group",
@@ -647,9 +683,9 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "The document archive is empty at the moment.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Drop documents to import",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} user and {{ groupsCount }} groups with access",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} users with access",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} group with access",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groups with access",
-  "Archived by {{userName}}": "Archived by {{userName}}",
-  "Sorry, an error occurred saving the collection": "Sorry, an error occurred saving the collection",
-  "Add a description": "הוסף תיאור",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Recently updated",
   "Recently published": "Recently published",
   "Least recently updated": "Least recently updated",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archived by {{userName}}",
+  "Sorry, an error occurred saving the collection": "Sorry, an error occurred saving the collection",
+  "Add a description": "הוסף תיאור",
   "Signing in": "Signing in",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
   "Error creating comment": "Error creating comment",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Edit {{noun}}",
   "Archived": "Archived",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Restore version",
   "No history yet": "No history yet",
   "Source": "Source",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Sign In",
   "Continue with Email": "Continue with Email",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Your import is being processed, you can safely leave this page",
   "File not supported – please upload a valid ZIP file": "File not supported – please upload a valid ZIP file",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Uploading",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Processing",
   "Expired": "Expired",
   "Completed": "Completed",
@@ -1060,6 +1099,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Active",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Settings saved",
