--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Elhagytad a megosztott dokumentumot",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
   "Apply template": "Sablon használata",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Megszakít",
   "Disconnect analytics": "Analitika leválasztása",
   "Home": "Kezdőlap",
@@ -136,6 +138,8 @@
   "Log out": "Kijelentkezés",
   "Mark notifications as read": "Értesítések olvasottnak jelölése",
   "Archive all notifications": "Összes értesítés archiválása",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Új alkalmazás",
   "New Application": "Új alkalmazás",
   "This version of the document was deleted": "A dokumetnum ezen verziója törölve lett",
@@ -172,6 +176,7 @@
   "Navigation": "Navigáció",
   "Notification": "Értesítés",
   "Groups": "Csoportok",
+  "Emoji": "Emoji",
   "People": "Emberek",
   "Share": "Megosztás",
   "Workspace": "Munkaterület",
@@ -253,6 +258,22 @@
   "Currently editing": "Jelenleg szerkeszti",
   "Currently viewing": "Jelenleg megtekinti",
   "Viewed {{ timeAgo }}": "Megtekintve: {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Uploading",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "A modult nem sikerült betölteni",
   "Loading Failed": "Betöltés sikertelen",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Elnézést, az alkalmazás egy részének betöltése sikertelen. Lehet, hogy frissült, mióta megnyitotta a fület, vagy hálózati kapcsolati hiba történt. Kérem próbálja újratölteni.",
@@ -311,6 +332,7 @@
   "Objects": "Tárgyak",
   "Symbols": "Szimbólumok",
   "Flags": "Zászlók",
+  "Custom": "Egyedi",
   "View only": "Csak megtekintés",
   "Can edit": "Szerkesztheti",
   "No access": "Nincs hozzáférés",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Elnézést, valami hiba történt.",
   "Click to retry": "Kattintson az újrapróbáláshoz",
   "Back": "Vissza",
+  "Notification options": "Notification options",
   "Unknown": "Ismeretlen",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Összes megjelölése olvasottként",
   "You're all caught up": "Minden hozzászólást elolvasott",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikon",
   "OAuth client icon": "OAuth kliens ikon",
   "My App": "Az én alkalmazásom",
@@ -575,7 +607,8 @@
   "Video": "Videó",
   "None": "Nincs",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Fájl importálása nem lehetséges",
   "Unsubscribed from document": "Leiratkozott a dokumentumról",
   "Unsubscribed from collection": "Leiratkozott a dokumentumról",
@@ -597,6 +630,9 @@
   "Comment options": "Hozzászólás beállítások",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Beágyazások engedélyezése",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Csoport tagjai",
   "Edit group": "Csoport szerkesztése",
@@ -647,9 +683,9 @@
   "30 days": "30 nap",
   "60 days": "60 nap",
   "90 days": "90 nap",
-  "Custom": "Egyedi",
   "No expiration": "Nincs lejárat",
   "The document archive is empty at the moment.": "A dokumentum archívum jelenleg üres.",
+  "Done editing": "Változtatások mentése",
   "Drop documents to import": "Engedje el itt a dokumentumot az importáláshoz",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> nem tartalmaz egyetlen\n                    dokumentumot sem.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} felhasználó és {{ groupsCount }} csoport rendelkezik hozzáféréssel",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} felhasználó rendelkezik hozzáféréssel",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} csoport rendelkezik hozzáféréssel",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} csoport rendelkezik hozzáféréssel",
-  "Archived by {{userName}}": "Archiválta: {{userName}}",
-  "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
-  "Add a description": "Adja meg a leírást",
   "Overview": "Áttekintés",
   "Popular": "Popular",
   "Recently updated": "Nemrég módosítva",
   "Recently published": "Nemrég publikálva",
   "Least recently updated": "Legrégebben módosított",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archiválta: {{userName}}",
+  "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
+  "Add a description": "Adja meg a leírást",
   "Signing in": "Bejelentkezés",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
   "Error creating comment": "Error creating comment",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Edit {{noun}}",
   "Archived": "Archiválva",
   "Save draft": "Piszkozat mentése",
-  "Done editing": "Változtatások mentése",
   "Restore version": "Verzió visszaállítása",
   "No history yet": "Még nincsenek előzmények",
   "Source": "Forrás",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Beágyazott LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Blokk beszúrása",
   "Sign In": "Bejelentkezés",
   "Continue with Email": "Continue with Email",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Your import is being processed, you can safely leave this page",
   "File not supported – please upload a valid ZIP file": "File not supported – please upload a valid ZIP file",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Uploading",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Processing",
   "Expired": "Lejárt",
   "Completed": "Completed",
@@ -1060,6 +1099,8 @@
   "Editors": "Szerkesztők",
   "All status": "Összes állapot",
   "Active": "Aktív",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Beállítások elmentve",
