--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
   "Apply template": "템플릿 적용",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "연결 해제",
   "Disconnect analytics": "분석 연결 해제",
   "Home": "홈",
@@ -136,6 +138,8 @@
   "Log out": "로그아웃",
   "Mark notifications as read": "알림을 읽은 상태로 표시",
   "Archive all notifications": "모든 알림 보관",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "새로운 앱",
   "New Application": "새 애플리케이션",
   "This version of the document was deleted": "이 문서의 버전은 삭제됨",
@@ -172,6 +176,7 @@
   "Navigation": "네비게이션",
   "Notification": "알림",
   "Groups": "그룹",
+  "Emoji": "이모지",
   "People": "사용자",
   "Share": "공유하기",
   "Workspace": "워크스페이스",
@@ -253,6 +258,22 @@
   "Currently editing": "현재 수정 중",
   "Currently viewing": "현재 보는 중",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 전에 봄",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "업로드 중",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "모듈 불러오기 실패",
   "Loading Failed": "불러오기 실패",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "죄송합니다, 일부 애플리케이션을 불러올 수 없습니다. 탭을 연 이후 업데이트 되었거나 네트워크 요청이 실패했기 때문일 수 있습니다. 새로고침을 시도해보세요",
@@ -311,6 +332,7 @@
   "Objects": "사물",
   "Symbols": "상징",
   "Flags": "깃발",
+  "Custom": "사용자 지정",
   "View only": "보기 전용",
   "Can edit": "편집 가능",
   "No access": "접근 불가",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "죄송합니다. 오류가 발생했습니다.",
   "Click to retry": "클릭하여 재시도하기",
   "Back": "뒤로 가기",
+  "Notification options": "Notification options",
   "Unknown": "알 수 없음",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "모두 읽은 상태로 표시",
   "You're all caught up": "모두 확인함",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "아이콘",
   "OAuth client icon": "OAuth 클라이언트 아이콘",
   "My App": "내 앱",
@@ -575,7 +607,8 @@
   "Video": "동영상",
   "None": "없음",
   "Delete embed": "임베드 삭제",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "파일을 가져올 수 없음",
   "Unsubscribed from document": "문서 구독이 취소됨",
   "Unsubscribed from collection": "컬렉션 구독 취소",
@@ -597,6 +630,9 @@
   "Comment options": "댓글 옵션",
   "Enable viewer insights": "뷰어 정보 활성화",
   "Enable embeds": "임베드 활성화",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "파일",
   "Group members": "그룹 구성원",
   "Edit group": "그룹 수정",
@@ -647,9 +683,9 @@
   "30 days": "30일",
   "60 days": "60일",
   "90 days": "90일",
-  "Custom": "사용자 지정",
   "No expiration": "만료 없음",
   "The document archive is empty at the moment.": "현재 보관 문서함이 비어 있습니다.",
+  "Done editing": "수정 완료",
   "Drop documents to import": "가져올 문서 내려놓기",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 컬렉션에 문서가 없습니다.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "액세스 권한이 있는 사용자 {{ usersCount }} 명 및 그룹 {{ groupsCount }} 개",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "액세스 권한이 있는 사용자 {{ usersCount }} 명",
   "{{ groupsCount }} groups with access": "액세스 권한이 있는 그룹 {{ groupsCount }} 개",
   "{{ groupsCount }} groups with access_plural": "액세스 권한이 있는 그룹 {{ groupsCount }} 개",
-  "Archived by {{userName}}": "{{userName}} 에 의해 보관됨",
-  "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
-  "Add a description": "설명 추가",
   "Overview": "개요",
   "Popular": "Popular",
   "Recently updated": "최근에 업데이트됨",
   "Recently published": "최근에 게시됨",
   "Least recently updated": "오래된 순",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "{{userName}} 에 의해 보관됨",
+  "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
+  "Add a description": "설명 추가",
   "Signing in": "로그인 중",
   "You can safely close this window once the Outline desktop app has opened": "Outline desktop 앱이 열리면 이 창을 안전하게 닫을 수 있습니다.",
   "Error creating comment": "댓글을 만드는 중에 오류가 발생했습니다.",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "{{noun}} 수정하기",
   "Archived": "보관됨",
   "Save draft": "임시 저장",
-  "Done editing": "수정 완료",
   "Restore version": "버전 복원",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "인라인 LaTeX",
   "Triggers": "트리거",
   "Mention users and more": "사용자 멘션 및 기타",
-  "Emoji": "이모지",
   "Insert block": "블록 삽입",
   "Sign In": "로그인",
   "Continue with Email": "이메일로 계속하기",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "클라이언트 시크릿을 교체하면 현재 시크릿이 무효화됩니다. 이 자격 증명을 사용하는 모든 애플리케이션을 업데이트해야 합니다.",
   "Displayed to users when authorizing": "사용자가 권한을 부여할 때 표시됨",
   "Application icon": "애플리케이션 아이콘",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "사용자가 권한을 부여할 때 표시되는 개발자 정보",
   "Developer name": "개발자 이름",
   "Developer URL": "개발자 URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "가져오기를 처리 중입니다. 이 페이지를 종료해도 됩니다.",
   "File not supported – please upload a valid ZIP file": "지원되지 않는 파일 – 유효한 ZIP 파일을 업로드하십시오.",
   "Set the default permission level for collections created from the import": "가져오기로 생성된 컬렉션에 대한 기본 권한 수준 설정",
-  "Uploading": "업로드 중",
   "Start import": "가져오기 시작",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "처리중",
   "Expired": "만료",
   "Completed": "완료",
@@ -1060,6 +1099,8 @@
   "Editors": "에디터",
   "All status": "모든 상태",
   "Active": "활성",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "왼쪽",
   "Right": "오른쪽",
   "Settings saved": "설정이 저장되었습니다",
