--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
   "Apply template": "Bruk mal",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Koble fra",
   "Disconnect analytics": "Koble fra analysedata",
   "Home": "Hjem",
@@ -136,6 +138,8 @@
   "Log out": "Logg ut",
   "Mark notifications as read": "Merk varsler som lest",
   "Archive all notifications": "Arkiver alle varsler",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Ny app",
   "New Application": "Ny applikasjon",
   "This version of the document was deleted": "Denne versjonen av dokumentet har blitt slettet",
@@ -172,6 +176,7 @@
   "Navigation": "Navigasjon",
   "Notification": "Varsling",
   "Groups": "Grupper",
+  "Emoji": "Emoji",
   "People": "Personer",
   "Share": "Del",
   "Workspace": "Arbeidsområde",
@@ -253,6 +258,22 @@
   "Currently editing": "Redigerer nå",
   "Currently viewing": "Ser nå",
   "Viewed {{ timeAgo }}": "Sett {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Laster opp",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Feil ved innlasting av modul",
   "Loading Failed": "Innlasting Feilet",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Beklager, en del av applikasjonen mislyktes i å laste. Dette kan være fordi den ble oppdatert etter du åpnet fanen eller på grunn av en nettverksfeil. Vennligst prøv å laste inn på nytt.",
@@ -311,6 +332,7 @@
   "Objects": "Gjenstander",
   "Symbols": "Symboler",
   "Flags": "Flagg",
+  "Custom": "Egendefinert",
   "View only": "Bare vis",
   "Can edit": "Kan redigere",
   "No access": "Ingen tilgang",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "Beklager, det oppstod en feil.",
   "Click to retry": "Klikk for å prøve igjen",
   "Back": "Tilbake",
+  "Notification options": "Notification options",
   "Unknown": "Ukjent",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikon",
   "OAuth client icon": "OAuth-klientikon",
   "My App": "Min app",
@@ -575,7 +607,8 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Slett embed",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Kunne ikke importere fil",
   "Unsubscribed from document": "Avsluttet abonnement fra dokument",
   "Unsubscribed from collection": "Avsluttet abonnement fra samling",
@@ -597,6 +630,9 @@
   "Comment options": "Kommentaralternativer",
   "Enable viewer insights": "Aktiver leserinnsikt",
   "Enable embeds": "Aktiver innebygginger",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fil",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Rediger gruppe",
@@ -647,9 +683,9 @@
   "30 days": "30 dager",
   "60 days": "60 dager",
   "90 days": "90 dager",
-  "Custom": "Egendefinert",
   "No expiration": "Ingen utløpsdato",
   "The document archive is empty at the moment.": "Dokumentarkivet er tomt for øyeblikket.",
+  "Done editing": "Ferdig med redigering",
   "Drop documents to import": "Slipp dokumenter for å importere",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> inneholder ingen\n                    dokumenter ennå.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} brukere og {{ groupsCount }} grupper med tilgang",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} brukere med tilgang",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupper med tilgang",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupper med tilgang",
-  "Archived by {{userName}}": "Arkivert av {{userName}}",
-  "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
-  "Add a description": "Legg til en beskrivelse",
   "Overview": "Oversikt",
   "Popular": "Popular",
   "Recently updated": "Nylig oppdatert",
   "Recently published": "Nylig publisert",
   "Least recently updated": "Minst nylig oppdatert",
   "A–Z": "A–Å",
+  "Archived by {{userName}}": "Arkivert av {{userName}}",
+  "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
+  "Add a description": "Legg til en beskrivelse",
   "Signing in": "Logger inn",
   "You can safely close this window once the Outline desktop app has opened": "Du kan trygt lukke dette vinduet når Outline-skrivebordsappen har åpnet",
   "Error creating comment": "Feil ved oppretting av kommentar",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "Rediger {{noun}}",
   "Archived": "Arkivert",
   "Save draft": "Lagre utkast",
-  "Done editing": "Ferdig med redigering",
   "Restore version": "Gjenopprett versjon",
   "No history yet": "Ingen historikk ennå",
   "Source": "Kilde",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "Innebygd LaTeX",
   "Triggers": "Utløsere",
   "Mention users and more": "Nevn brukere og mer",
-  "Emoji": "Emoji",
   "Insert block": "Sett inn blokk",
   "Sign In": "Logg inn",
   "Continue with Email": "Fortsett med e-post",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotering vil ugyldiggjøre gjeldende klientnøkkel. Sørg for å oppdatere alle applikasjoner med disse nøklene.",
   "Displayed to users when authorizing": "Vist til brukere ved autorisering",
   "Application icon": "Applikasjonsikon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Utviklerinformasjon som vises til brukere ved autorisering",
   "Developer name": "Utviklernavn",
   "Developer URL": "Utvikler-URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "Importen din blir behandlet, du kan trygt forlate denne siden",
   "File not supported – please upload a valid ZIP file": "Fil ikke støttet – vennligst last opp en gyldig ZIP-fil",
   "Set the default permission level for collections created from the import": "Angi standard tilgangsnivå for samlinger opprettet fra denne importen",
-  "Uploading": "Laster opp",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Behandler",
   "Expired": "Utløpt",
   "Completed": "Fullført",
@@ -1060,6 +1099,8 @@
   "Editors": "Redaktører",
   "All status": "Alle statuser",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Venstre",
   "Right": "Høyre",
   "Settings saved": "Innstillinger lagret",
