--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
@@ -136,6 +138,8 @@
   "Log out": "退出登录",
   "Mark notifications as read": "将通知标记为已读",
   "Archive all notifications": "将所有通知存档",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "新建应用",
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
@@ -172,6 +176,7 @@
   "Navigation": "导航",
   "Notification": "通知",
   "Groups": "群组",
+  "Emoji": "表情",
   "People": "用户",
   "Share": "分享",
   "Workspace": "工作区",
@@ -253,6 +258,22 @@
   "Currently editing": "正在编辑",
   "Currently viewing": "正在浏览",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 浏览",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "上传中",
+  "Add emoji": "Add emoji",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模块加载失败",
   "Loading Failed": "加载失败",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "对不起，部分应用程序加载失败。这可能是因为它在您打开选项卡后更新了，或者是因为网络请求失败。请尝试重新加载。",
@@ -311,6 +332,7 @@
   "Objects": "物品",
   "Symbols": "符号",
   "Flags": "标志",
+  "Custom": "自定义",
   "View only": "仅浏览",
   "Can edit": "可编辑",
   "No access": "无访问权限",
@@ -331,9 +353,19 @@
   "Sorry, an error occurred.": "抱歉，出错了。",
   "Click to retry": "点击重试",
   "Back": "返回",
+  "Notification options": "Notification options",
   "Unknown": "未知",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "您已了解所有情况",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "图标",
   "OAuth client icon": "OAuth 客户端图标",
   "My App": "我的应用",
@@ -575,7 +607,8 @@
   "Video": "视频",
   "None": "空",
   "Delete embed": "删除嵌入",
-  "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "无法导入文件",
   "Unsubscribed from document": "取消订阅文档",
   "Unsubscribed from collection": "取消订阅集合",
@@ -597,6 +630,9 @@
   "Comment options": "评论选项",
   "Enable viewer insights": "启用浏览者统计",
   "Enable embeds": "启用嵌入",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "文件",
   "Group members": "群组成员",
   "Edit group": "编辑群组",
@@ -647,9 +683,9 @@
   "30 days": "30 天",
   "60 days": "60 天",
   "90 days": "90 天",
-  "Custom": "自定义",
   "No expiration": "无期限",
   "The document archive is empty at the moment.": "文档归档目前是空的。",
+  "Done editing": "保存编辑",
   "Drop documents to import": "拖放文档以导入",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 尚未包含任何文档",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} 个用户和 {{ groupsCount }} 个组有访问权限",
@@ -660,15 +696,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} 个用户有访问权限",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} 个组有访问权限",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} 个组有访问权限",
-  "Archived by {{userName}}": "已被 {{userName}} 存档",
-  "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
-  "Add a description": "添加描述",
   "Overview": "概览",
   "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近发布",
   "Least recently updated": "最近最少更新",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "已被 {{userName}} 存档",
+  "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
+  "Add a description": "添加描述",
   "Signing in": "登录中",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面应用程序打开后，你可以安全地关闭此窗口",
   "Error creating comment": "创建评论时出错",
@@ -717,7 +753,6 @@
   "Edit {{noun}}": "编辑 {{noun}}",
   "Archived": "已归档",
   "Save draft": "保存草稿",
-  "Done editing": "保存编辑",
   "Restore version": "恢复此版本",
   "No history yet": "暂无历史记录",
   "Source": "源",
@@ -848,7 +883,6 @@
   "Inline LaTeX": "行内公式",
   "Triggers": "触发器",
   "Mention users and more": "提及用户等",
-  "Emoji": "表情",
   "Insert block": "插入块",
   "Sign In": "登录",
   "Continue with Email": "使用电子邮箱继续",
@@ -955,6 +989,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "轮换客户端密钥将会使之前的密钥不再有效。请确保更新使用这些密钥的应用程序。",
   "Displayed to users when authorizing": "在授权时显示给用户",
   "Application icon": "应用图标",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "在授权时显示给用户的开发者信息",
   "Developer name": "开发者名称",
   "Developer URL": "开发者 URL",
@@ -989,8 +1024,12 @@
   "Your import is being processed, you can safely leave this page": "您的导入正在处理中，您可以放心地离开此页面",
   "File not supported – please upload a valid ZIP file": "不支持文件 - 请上传有效的 ZIP 文件",
   "Set the default permission level for collections created from the import": "为从导入创建的文档集设置默认权限级别",
-  "Uploading": "上传中",
   "Start import": "开始导入",
+  "Added by": "Added by",
+  "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "处理中",
   "Expired": "已过期",
   "Completed": "已完成",
@@ -1060,6 +1099,8 @@
   "Editors": "编辑者",
   "All status": "所有状态",
   "Active": "活跃的",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "设置已保存",
